// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse default scripts ascii.src 1`] = `
Array [
  "AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if (signs.hasIndex(char)) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors)==\\"string\\") then
r[0]=[\\"<color=#\\"+colors+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors+\\">\\"]+r[2]+[\\"</color>\\"]
else if (typeof(colors)==\\"list\\") then
r[0]=[\\"<color=#\\"+colors[0]+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors[1]+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors[2]+\\">\\"]+r[2]+[\\"</color>\\"]
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts ascii.src beautify 1`] = `
Array [
  "AsciiGen = {}

map = {}

map.a = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"|| || \\",
]
map.b = [
	\\"||¯/ \\",
	\\"|| \\\\ \\",
	\\"||_/ \\",
]
map.c = [
	\\"||¯ \\",
	\\"||  \\",
	\\"||_ \\",
]
map.d = [
	\\"||¯\\\\\\\\ \\",
	\\"|| // \\",
	\\"||//  \\",
]
map.e = [
	\\"||¯ \\",
	\\"||- \\",
	\\"||_ \\",
]
map.f = [
	\\"||¯ \\",
	\\"||_ \\",
	\\"||  \\",
]
map.g = [
	\\"||¯¯  \\",
	\\"|| \\\\\\\\ \\",
	\\"||_|| \\",
]
map.h = [
	\\"|| || \\",
	\\"||-|| \\",
	\\"|| || \\",
]
map.i = [
	\\"|| \\",
	\\"|| \\",
	\\"|| \\",
]
map.j = [
	\\" ¯||¯ \\",
	\\"  ||  \\",
	\\"|_||  \\",
]
map.k = [
	\\"||  / \\",
	\\"|| /  \\",
	\\"||¯\\\\\\\\ \\",
]
map.l = [
	\\"||  \\",
	\\"||  \\",
	\\"||_ \\",
]
map.m = [
	\\"||\\\\\\\\/|| \\",
	\\"||   || \\",
	\\"||   || \\",
]
map.n = [
	\\"||\\\\\\\\ || \\",
	\\"|| \\\\\\\\|| \\",
	\\"||  \\\\|| \\",
]
map.o = [
	\\"||¯|| \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.p = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"||    \\",
]
map.q = [
	\\"||¯||  \\",
	\\"|| ||  \\",
	\\"||_||¬ \\",
]
map.r = [
	\\"||¯|| \\",
	\\"||¯\\\\\\\\ \\",
	\\"|| || \\",
]
map.s = [
	\\"||¯¯ \\",
	\\" \\\\\\\\  \\",
	\\"__|| \\",
]
map.t = [
	\\"¯||¯ \\",
	\\" ||  \\",
	\\" ||  \\",
]
map.u = [
	\\"|| || \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.v = [
	\\"\\\\\\\\ || \\",
	\\" \\\\\\\\|| \\",
	\\"  \\\\\\\\| \\",
]
map.w = [
	\\"\\\\\\\\ |\\\\\\\\ | \\",
	\\" \\\\\\\\| \\\\\\\\| \\",
	\\"  \\\\\\\\  \\\\\\\\ \\",
]
map.x = [
	\\"\\\\\\\\  / \\",
	\\" \\\\\\\\/  \\",
	\\" //\\\\  \\",
]
map.y = [
	\\"\\\\\\\\  // \\",
	\\" \\\\\\\\//  \\",
	\\"  ||   \\",
]
map.z = [
	\\"¯// \\",
	\\"//  \\",
	\\"||_ \\",
]
map[\\"0\\"] = [
	\\"||¯|| \\",
	\\"||x|| \\",
	\\"||_|| \\",
]
map[\\"1\\"] = [
	\\"'|| \\",
	\\" || \\",
	\\" || \\",
]
map[\\"2\\"] = [
	\\"¯¯|| \\",
	\\"||¯  \\",
	\\"||_  \\",
]
map[\\"3\\"] = [
	\\"¯|| \\",
	\\"-|| \\",
	\\"_|| \\",
]
map[\\"4\\"] = [
	\\" /|| \\",
	\\"/_|| \\",
	\\"  || \\",
]
map[\\"5\\"] = [
	\\"||¯¯ \\",
	\\" ¯|| \\",
	\\" _|| \\",
]
map[\\"6\\"] = [
	\\"||¯¯  \\",
	\\"||¯|| \\",
	\\"||_|| \\",
]
map[\\"7\\"] = [
	\\"¯¯// \\",
	\\" //  \\",
	\\"//   \\",
]
map[\\"8\\"] = [
	\\"||¯|| \\",
	\\"||-|| \\",
	\\"||_|| \\",
]
map[\\"9\\"] = [
	\\"||¯|| \\",
	\\"  ¯|| \\",
	\\"  //  \\",
]
map[\\" \\"] = [
	\\"  \\",
	\\"  \\",
	\\"  \\",
]

AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [
		[],
		[],
		[],
	]
	signs = self.MAP

	for char in str
		char = char.lower
		if signs.hasIndex(char) then
			r[0].push signs[char][0]
			r[1].push signs[char][1]
			r[2].push signs[char][2]
		end if
	end for

	if typeof(colors) == \\"string\\" then
		r[0] = [ \\"<color=#\\" + colors + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	else if typeof(colors) == \\"list\\" then
		r[0] = [ \\"<color=#\\" + colors[0] + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors[1] + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors[2] + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	end if

	return [
		r[0].join(\\"\\"),
		r[1].join(\\"\\"),
		r[2].join(\\"\\"),
	].join(\\"\\\\n\\")
end function

print AsciiGen.gen(\\"Hallo\\")",
]
`;

exports[`parse default scripts ascii.src uglify 1`] = `
Array [
  "globals.H=globals
H.AT=\\"||¯|| \\"
H.AS=\\"||_|| \\"
H.AP=\\"|| || \\"
H.AN=\\"||¯ \\"
H.AR=\\"||  \\"
H.AO=\\"||_ \\"
H.AU=\\"||¯\\\\\\\\ \\"
H.AQ=\\"|| \\"
H.AV=\\"  \\"
H.AW=\\"<color=#\\"
H.AY=\\">\\"
H.AX=\\"</color>\\"
I={}
map={}
map.a=[AT,AS,AP]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[AN,AR,AO]
map.d=[AU,\\"|| // \\",\\"||//  \\"]
map.e=[AN,\\"||- \\",AO]
map.f=[AN,AO,AR]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",AS]
map.h=[AP,\\"||-|| \\",AP]
map.i=[AQ,AQ,AQ]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",AU]
map.l=[AR,AR,AO]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[AT,AP,AS]
map.p=[AT,AS,\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[AT,AU,AP]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[AP,AP,AS]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",AO]
map[\\"0\\"]=[AT,\\"||x|| \\",AS]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",AT,AS]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[AT,\\"||-|| \\",AS]
map[\\"9\\"]=[AT,\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[AV,AV,AV]
I.MAP=map
I.gen=function(str,AL)
AG=[[],[],[]]
AM=self.MAP
for char in str
char=char.lower
if (AM.hasIndex(char)) then
AG[0].push(AM[char][0])
AG[1].push(AM[char][1])
AG[2].push(AM[char][2])
end if
end for
if (typeof(AL)==\\"string\\") then
AG[0]=[AW+AL+AY]+AG[0]+[AX]
AG[1]=[AW+AL+AY]+AG[1]+[AX]
AG[2]=[AW+AL+AY]+AG[2]+[AX]
else if (typeof(AL)==\\"list\\") then
AG[0]=[AW+AL[0]+AY]+AG[0]+[AX]
AG[1]=[AW+AL[1]+AY]+AG[1]+[AX]
AG[2]=[AW+AL[2]+AY]+AG[2]+[AX]
end if
return [AG[0].join(\\"\\"),AG[1].join(\\"\\"),AG[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(I.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts beautify-cases.src 1`] = `
Array [
  "// binary + logical
test=1+2+3+4+5+6 and (2+3+4+5+6+(2+3+4+5+6+7))
//call expression
printAlign(\\"dieFace[1] - dieFace[6]\\",[dieFace[1],dieFace[2],dieFace[3],dieFace[4],dieFace[5],dieFace[6],{\\"foo\\":123,\\"was\\":\\"wo\\"}].join,123,123)
printAlign(1,2,3,4)
//object
test={}
test={\\"was\\":123}
test={\\"foo\\":123,\\"was\\":[\\"abc\\",1,234],\\"xx\\":{\\"foo\\":123,\\"ooo\\":{\\"foo\\":123,\\"was\\":\\"wo\\"},\\"was\\":\\"wo\\"},\\"123\\":\\"3\\"}
//list
test=[]
test=[\\"was\\"]
test=[\\"abc\\",1,[\\"abc\\",1,234],[\\"abc\\",[\\"abc\\",1,234],1,234],234]
// shorthand binary
test=test+5
test=test+4+5
test.abc=test.abc+5
test.abc=test.abc+4+5
// if
if (true) then print(\\"test\\")
if (true) then print(\\"test\\") else print(\\"xd\\")
if (true) then test=[1,2,3,4,5]
if (true) then test=[1,2,3,4,5] else test=[5,4,3,2,1]
if (true) then
print(\\"test\\")
else
print(\\"xd\\")
end if
if (true) then
print(\\"test\\")
else if (false) then
print(\\"xa\\")
else
print(\\"xd\\")
end if
test=function
return [1,2,3,4,5]
end function
// comments
test=test+5
// test
// :D
test=[1,2,3,4]
// its a list
test=function
// its a function
return 123
// it a return
end function
// its function end
for test in [123]
// my for loop
print(\\"test\\")
// some print
end for
// end for loop
// was
test={\\"was\\":123}
// was
test={\\"was\\":123,\\"foo\\":13,\\"bar\\":45}
// while block with shorthand if else
while true
if true then print(\\"test\\") else print(\\"xd\\")
end while
if true then stacktrace=function
print(\\"test\\")
end function
if false then stacktrace=function
print(\\"abc\\")
end function
print(\\"abc\\">[42])
//foo
test[25]
//foo
test[25]
//bar
test[123][25]
//foo
test[25](11)
//bar
test(11)[25]
//foo
while true
//bar
end while
if x.remove(@key) then return \\"foo:\\"+@key+\\"!\\"
//foo
foo.bar=function(key=0,val=0,nil=0,nul=0)
if true then return function
//bar
print(\\"test\\")
end function
end function
test=function
end function
if test==null then
// foo
print(\\"foo\\")
else if test==null then
// bar
print(\\"bar\\")
else
// nil
print(\\"nil\\")
end if
IV=IV+([floor(rnd(byte)*256)])
// Warning: rnd is not cryptographically secure
IV=IV+({\\"was\\":floor(rnd(byte))})
// Warning: rnd is not cryptographically secure",
]
`;

exports[`parse default scripts beautify-cases.src beautify 1`] = `
Array [
  "// binary + logical
test = 1 + 2 + 3 + 4 + 5 + 6 and 
	(2 + 3 + 4 + 5 + 6 + (2 + 3 + 4 + 5 + 6 + 7))

// call expression
printAlign(
	\\"dieFace[1] - dieFace[6]\\",
	[
		dieFace[1],
		dieFace[2],
		dieFace[3],
		dieFace[4],
		dieFace[5],
		dieFace[6],
		{
			\\"foo\\": 123,
			\\"was\\": \\"wo\\",
		},
	].join,
	123,
	123)
printAlign(
	1,
	2,
	3,
	4)

// object
test = {}
test = { \\"was\\": 123 }
test = {
	\\"foo\\": 123,
	\\"was\\": [
		\\"abc\\",
		1,
		234,
	],
	\\"xx\\": {
		\\"foo\\": 123,
		\\"ooo\\": {
			\\"foo\\": 123,
			\\"was\\": \\"wo\\",
		},
		\\"was\\": \\"wo\\",
	},
	\\"123\\": \\"3\\",
}

// list
test = []
test = [ \\"was\\" ]
test = [
	\\"abc\\",
	1,
	[
		\\"abc\\",
		1,
		234,
	],
	[
		\\"abc\\",
		[
			\\"abc\\",
			1,
			234,
		],
		1,
		234,
	],
	234,
]

// shorthand binary
test = test + 5
test = test + 4 + 5
test.abc = test.abc + 5
test.abc = test.abc + 4 + 5

// if
if true then print(\\"test\\")
if true then print(\\"test\\") else print(\\"xd\\")
if true then test = [
	1,
	2,
	3,
	4,
	5,
]
if true then test = [
	1,
	2,
	3,
	4,
	5,
] else test = [
	5,
	4,
	3,
	2,
	1,
]
if true then
	print \\"test\\"
else
	print \\"xd\\"
end if
if true then
	print \\"test\\"
else if false then
	print \\"xa\\"
else
	print \\"xd\\"
end if

test = function
	return [
		1,
		2,
		3,
		4,
		5,
	]
end function


// comments
test = test + 5 // test
test = [
	1,
	2,
	3,
	4,
]
// :D
// its a list
test = function // its a function
	return 123 // it a return
end function // its function end
for test in [ 123 ] // my for loop
	print \\"test\\" // some print
end for // end for loop

test = { \\"was\\": 123 }
// was

test = {
	\\"was\\": 123,
	\\"foo\\": 13,
	\\"bar\\": 45,
}
// was




// while block with shorthand if else
while true
	if true then print(\\"test\\") else print(\\"xd\\")
end while


if true then stacktrace = function
	print \\"test\\"
end function
if false then stacktrace = function
	print \\"abc\\"
end function

print \\"abc\\" > [ 42 ] // foo

test[25] // foo
test[25] // bar
test[123][25] // foo
test[25] 11 // bar
test(11)[25] // foo

while true // bar
end while

if x.remove(@key) then return \\"foo:\\" + @key + \\"!\\" // foo

foo.bar = function(key = 0, val = 0, nil = 0, nul = 0)
	if true then return function // bar
		print \\"test\\"
	end function
end function

test = function
end function

if test == null then // foo
	print \\"foo\\"
else if test == null then // bar
	print \\"bar\\"
else // nil
	print \\"nil\\"
end if

IV = IV + ([ floor(rnd(byte) * 256) ]) // Warning: rnd is not cryptographically secure
IV = IV + ({ \\"was\\": floor(rnd(byte)) }) // Warning: rnd is not cryptographically secure",
]
`;

exports[`parse default scripts beautify-cases.src uglify 1`] = `
Array [
  "globals.H=globals
H.d=1
H.g=4
H.c=5
H.X=\\"foo\\"
H.V=123
H.W=\\"was\\"
H.Y=\\"wo\\"
H.Z=\\"abc\\"
H.a=234
H.b=true
H.e=\\"test\\"
H.f=\\"xd\\"
I=d+2+3+g+c+6 and (2+3+g+c+6+(2+3+g+c+6+7))
J(\\"dieFace[1] - dieFace[6]\\",[K[d],K[2],K[3],K[g],K[c],K[6],{X:V,W:Y}].join,V,V)
J(d,2,3,g)
I={}
I={W:V}
I={X:V,W:[Z,d,a],\\"xx\\":{X:V,\\"ooo\\":{X:V,W:Y},W:Y},\\"123\\":\\"3\\"}
I=[]
I=[W]
I=[Z,d,[Z,d,a],[Z,[Z,d,a],d,a],a]
I=I+c
I=I+g+c
I.abc=I.abc+c
I.abc=I.abc+g+c
if (b) then print(e)
if (b) then print(e) else print(f)
if (b) then I=[d,2,3,g,c]
if (b) then I=[d,2,3,g,c] else I=[c,g,3,2,d]
if (b) then
print(e)
else
print(f)
end if
if (b) then
print(e)
else if (false) then
print(\\"xa\\")
else
print(f)
end if
I=function
return [d,2,3,g,c]
end function
I=I+c
I=[d,2,3,g]
I=function
return V
end function
for I in [V]
print(e)
end for
I={W:V}
I={W:V,X:13,\\"bar\\":45}
while b
if b then print(e) else print(f)
end while
if b then M=function
print(e)
end function
if false then M=function
print(Z)
end function
print(Z>[42])
I[25]
I[25]
I[V][25]
I[25](11)
I(11)[25]
while b
end while
if N.remove(@O) then return \\"foo:\\"+@O+\\"!\\"
P.bar=function(O=0,val=0,T=0,U=0)
if b then return function
print(e)
end function
end function
I=function
end function
if I==null then
print(X)
else if I==null then
print(\\"bar\\")
else
print(\\"nil\\")
end if
R=R+([floor(rnd(S)*256)])
R=R+({W:floor(rnd(S))})",
]
`;

exports[`parse default scripts binary-expressions.src 1`] = `
Array [
  "a=a/(b)
a=a*(b)
a=a-(b)
a=a+(b)
bitwise(\\"<<\\",a,b)
bitwise(\\">>\\",a,b)
w=bitwise(\\">>\\",bitwise(\\">>>\\",a,(bitwise(\\"<<\\",b,c))),a)
bitwise(\\"|\\",a,b)
bitwise(\\"&\\",a,b)
a^b
a and b
a or b",
]
`;

exports[`parse default scripts binary-expressions.src beautify 1`] = `
Array [
  "a = a / (b)
a = a * (b)
a = a - (b)
a = a + (b)
bitwise(\\"<<\\", a, b)
bitwise(\\">>\\", a, b)
w = bitwise(\\">>\\", bitwise(\\">>>\\", a, (bitwise(\\"<<\\", b, c))), a)
bitwise(\\"|\\", a, b)
bitwise(\\"&\\", a, b)
a ^ b
a and b
a or b",
]
`;

exports[`parse default scripts binary-expressions.src uglify 1`] = `
Array [
  "I=I/(J)
I=I*(J)
I=I-(J)
I=I+(J)
bitwise(\\"<<\\",I,J)
bitwise(\\">>\\",I,J)
K=bitwise(\\">>\\",bitwise(\\">>>\\",I,(bitwise(\\"<<\\",J,L))),I)
bitwise(\\"|\\",I,J)
bitwise(\\"&\\",I,J)
I^J
I and J
I or J",
]
`;

exports[`parse default scripts comments.src 1`] = `
Array [
  "//comment
myVariable
//comment2
test=2
//comment3",
]
`;

exports[`parse default scripts comments.src beautify 1`] = `
Array [
  "// comment
myVariable // comment2
test = 2 // comment3",
]
`;

exports[`parse default scripts comments.src uglify 1`] = `
Array [
  "I
J=2",
]
`;

exports[`parse default scripts default-args.src 1`] = `
Array [
  "test=function(arg1=0,arg2=\\"test\\")
print(arg1)
print(arg2)
end function
test
test(\\"foo\\",false)
var1=\\"test\\"
var2=\\"test\\"
var3=\\"test\\"",
]
`;

exports[`parse default scripts default-args.src beautify 1`] = `
Array [
  "test = function(arg1 = 0, arg2 = \\"test\\")
	print arg1
	print arg2
end function

test
test \\"foo\\", false

var1 = \\"test\\"
var2 = \\"test\\"
var3 = \\"test\\"",
]
`;

exports[`parse default scripts default-args.src uglify 1`] = `
Array [
  "globals.H=globals
H.O=\\"test\\"
I=function(M=0,N=O)
print(M)
print(N)
end function
I
I(\\"foo\\",false)
J=O
K=O
L=O",
]
`;

exports[`parse default scripts envar.src 1`] = `
Array [
  "myvar2=\\"\\"foo\\"\\"

myvar=\\"\\"foo\\"\\"
print(\\"0.2\\")",
]
`;

exports[`parse default scripts envar.src beautify 1`] = `
Array [
  "myvar2 = \\"\\"foo\\"\\"


myvar = \\"\\"foo\\"\\"
print \\"0.2\\"",
]
`;

exports[`parse default scripts envar.src uglify 1`] = `
Array [
  "J=\\"\\"foo\\"\\"

I=\\"\\"foo\\"\\"
print(\\"0.2\\")",
]
`;

exports[`parse default scripts greybel-utils.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if (not MODULES.hasIndex(r)) then
exit(\\"Module \\"+r+\\" cannot be found...\\")
end if
module=@MODULES[r]
return @module(r).exports
end function
MODULES[\\"B\\"]=function(r)
module={}
if (EXPORTED.hasIndex(r)) then
module=EXPORTED[r]
end if
if (not module.hasIndex(\\"exports\\")) then
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if (signs.hasIndex(char)) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors)==\\"string\\") then
r[0]=[\\"<color=#\\"+colors+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors+\\">\\"]+r[2]+[\\"</color>\\"]
else if (typeof(colors)==\\"list\\") then
r[0]=[\\"<color=#\\"+colors[0]+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors[1]+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors[2]+\\">\\"]+r[2]+[\\"</color>\\"]
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))
end if
EXPORTED[r]=module
return EXPORTED[r]
end function
foo = __REQUIRE(\\"B\\")
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if (signs.hasIndex(char)) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors)==\\"string\\") then
r[0]=[\\"<color=#\\"+colors+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors+\\">\\"]+r[2]+[\\"</color>\\"]
else if (typeof(colors)==\\"list\\") then
r[0]=[\\"<color=#\\"+colors[0]+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors[1]+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors[2]+\\">\\"]+r[2]+[\\"</color>\\"]
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))

import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
print(123)
print(6)
print(\\"sub-import.src\\")

\\"true\\"
//debugger
print(7)
print(\\"greybel-utils.src\\")
print(\\"print \\"\\"1..\\"\\"
print \\"\\"2..\\"\\"
print \\"\\"3..\\"\\"
print \\"\\"hello world\\"\\"\\")",
  "myvar2=\\"\\"foo\\"\\"",
  "lastimport=\\"hi\\"",
  "test=123
was=123
x=123",
]
`;

exports[`parse default scripts greybel-utils.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}
__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit \\"Module \\" + r + \\" cannot be found...\\"
	end if
	module = @MODULES[r]
	return @module(r).exports
end function
MODULES[\\"B\\"] = function(r)
	module = {}
	if EXPORTED.hasIndex(r) then
		module = EXPORTED[r]
	end if
	if not module.hasIndex(\\"exports\\") then
		AsciiGen = {}

map = {}

map.a = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"|| || \\",
]
map.b = [
	\\"||¯/ \\",
	\\"|| \\\\ \\",
	\\"||_/ \\",
]
map.c = [
	\\"||¯ \\",
	\\"||  \\",
	\\"||_ \\",
]
map.d = [
	\\"||¯\\\\\\\\ \\",
	\\"|| // \\",
	\\"||//  \\",
]
map.e = [
	\\"||¯ \\",
	\\"||- \\",
	\\"||_ \\",
]
map.f = [
	\\"||¯ \\",
	\\"||_ \\",
	\\"||  \\",
]
map.g = [
	\\"||¯¯  \\",
	\\"|| \\\\\\\\ \\",
	\\"||_|| \\",
]
map.h = [
	\\"|| || \\",
	\\"||-|| \\",
	\\"|| || \\",
]
map.i = [
	\\"|| \\",
	\\"|| \\",
	\\"|| \\",
]
map.j = [
	\\" ¯||¯ \\",
	\\"  ||  \\",
	\\"|_||  \\",
]
map.k = [
	\\"||  / \\",
	\\"|| /  \\",
	\\"||¯\\\\\\\\ \\",
]
map.l = [
	\\"||  \\",
	\\"||  \\",
	\\"||_ \\",
]
map.m = [
	\\"||\\\\\\\\/|| \\",
	\\"||   || \\",
	\\"||   || \\",
]
map.n = [
	\\"||\\\\\\\\ || \\",
	\\"|| \\\\\\\\|| \\",
	\\"||  \\\\|| \\",
]
map.o = [
	\\"||¯|| \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.p = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"||    \\",
]
map.q = [
	\\"||¯||  \\",
	\\"|| ||  \\",
	\\"||_||¬ \\",
]
map.r = [
	\\"||¯|| \\",
	\\"||¯\\\\\\\\ \\",
	\\"|| || \\",
]
map.s = [
	\\"||¯¯ \\",
	\\" \\\\\\\\  \\",
	\\"__|| \\",
]
map.t = [
	\\"¯||¯ \\",
	\\" ||  \\",
	\\" ||  \\",
]
map.u = [
	\\"|| || \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.v = [
	\\"\\\\\\\\ || \\",
	\\" \\\\\\\\|| \\",
	\\"  \\\\\\\\| \\",
]
map.w = [
	\\"\\\\\\\\ |\\\\\\\\ | \\",
	\\" \\\\\\\\| \\\\\\\\| \\",
	\\"  \\\\\\\\  \\\\\\\\ \\",
]
map.x = [
	\\"\\\\\\\\  / \\",
	\\" \\\\\\\\/  \\",
	\\" //\\\\  \\",
]
map.y = [
	\\"\\\\\\\\  // \\",
	\\" \\\\\\\\//  \\",
	\\"  ||   \\",
]
map.z = [
	\\"¯// \\",
	\\"//  \\",
	\\"||_ \\",
]
map[\\"0\\"] = [
	\\"||¯|| \\",
	\\"||x|| \\",
	\\"||_|| \\",
]
map[\\"1\\"] = [
	\\"'|| \\",
	\\" || \\",
	\\" || \\",
]
map[\\"2\\"] = [
	\\"¯¯|| \\",
	\\"||¯  \\",
	\\"||_  \\",
]
map[\\"3\\"] = [
	\\"¯|| \\",
	\\"-|| \\",
	\\"_|| \\",
]
map[\\"4\\"] = [
	\\" /|| \\",
	\\"/_|| \\",
	\\"  || \\",
]
map[\\"5\\"] = [
	\\"||¯¯ \\",
	\\" ¯|| \\",
	\\" _|| \\",
]
map[\\"6\\"] = [
	\\"||¯¯  \\",
	\\"||¯|| \\",
	\\"||_|| \\",
]
map[\\"7\\"] = [
	\\"¯¯// \\",
	\\" //  \\",
	\\"//   \\",
]
map[\\"8\\"] = [
	\\"||¯|| \\",
	\\"||-|| \\",
	\\"||_|| \\",
]
map[\\"9\\"] = [
	\\"||¯|| \\",
	\\"  ¯|| \\",
	\\"  //  \\",
]
map[\\" \\"] = [
	\\"  \\",
	\\"  \\",
	\\"  \\",
]

AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [
		[],
		[],
		[],
	]
	signs = self.MAP

	for char in str
		char = char.lower
		if signs.hasIndex(char) then
			r[0].push signs[char][0]
			r[1].push signs[char][1]
			r[2].push signs[char][2]
		end if
	end for

	if typeof(colors) == \\"string\\" then
		r[0] = [ \\"<color=#\\" + colors + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	else if typeof(colors) == \\"list\\" then
		r[0] = [ \\"<color=#\\" + colors[0] + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors[1] + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors[2] + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	end if

	return [
		r[0].join(\\"\\"),
		r[1].join(\\"\\"),
		r[2].join(\\"\\"),
	].join(\\"\\\\n\\")
end function

print AsciiGen.gen(\\"Hallo\\")
	end if
	EXPORTED[r] = module
	return EXPORTED[r]
end function
foo = __REQUIRE(\\"B\\")
AsciiGen = {}

map = {}

map.a = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"|| || \\",
]
map.b = [
	\\"||¯/ \\",
	\\"|| \\\\ \\",
	\\"||_/ \\",
]
map.c = [
	\\"||¯ \\",
	\\"||  \\",
	\\"||_ \\",
]
map.d = [
	\\"||¯\\\\\\\\ \\",
	\\"|| // \\",
	\\"||//  \\",
]
map.e = [
	\\"||¯ \\",
	\\"||- \\",
	\\"||_ \\",
]
map.f = [
	\\"||¯ \\",
	\\"||_ \\",
	\\"||  \\",
]
map.g = [
	\\"||¯¯  \\",
	\\"|| \\\\\\\\ \\",
	\\"||_|| \\",
]
map.h = [
	\\"|| || \\",
	\\"||-|| \\",
	\\"|| || \\",
]
map.i = [
	\\"|| \\",
	\\"|| \\",
	\\"|| \\",
]
map.j = [
	\\" ¯||¯ \\",
	\\"  ||  \\",
	\\"|_||  \\",
]
map.k = [
	\\"||  / \\",
	\\"|| /  \\",
	\\"||¯\\\\\\\\ \\",
]
map.l = [
	\\"||  \\",
	\\"||  \\",
	\\"||_ \\",
]
map.m = [
	\\"||\\\\\\\\/|| \\",
	\\"||   || \\",
	\\"||   || \\",
]
map.n = [
	\\"||\\\\\\\\ || \\",
	\\"|| \\\\\\\\|| \\",
	\\"||  \\\\|| \\",
]
map.o = [
	\\"||¯|| \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.p = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"||    \\",
]
map.q = [
	\\"||¯||  \\",
	\\"|| ||  \\",
	\\"||_||¬ \\",
]
map.r = [
	\\"||¯|| \\",
	\\"||¯\\\\\\\\ \\",
	\\"|| || \\",
]
map.s = [
	\\"||¯¯ \\",
	\\" \\\\\\\\  \\",
	\\"__|| \\",
]
map.t = [
	\\"¯||¯ \\",
	\\" ||  \\",
	\\" ||  \\",
]
map.u = [
	\\"|| || \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.v = [
	\\"\\\\\\\\ || \\",
	\\" \\\\\\\\|| \\",
	\\"  \\\\\\\\| \\",
]
map.w = [
	\\"\\\\\\\\ |\\\\\\\\ | \\",
	\\" \\\\\\\\| \\\\\\\\| \\",
	\\"  \\\\\\\\  \\\\\\\\ \\",
]
map.x = [
	\\"\\\\\\\\  / \\",
	\\" \\\\\\\\/  \\",
	\\" //\\\\  \\",
]
map.y = [
	\\"\\\\\\\\  // \\",
	\\" \\\\\\\\//  \\",
	\\"  ||   \\",
]
map.z = [
	\\"¯// \\",
	\\"//  \\",
	\\"||_ \\",
]
map[\\"0\\"] = [
	\\"||¯|| \\",
	\\"||x|| \\",
	\\"||_|| \\",
]
map[\\"1\\"] = [
	\\"'|| \\",
	\\" || \\",
	\\" || \\",
]
map[\\"2\\"] = [
	\\"¯¯|| \\",
	\\"||¯  \\",
	\\"||_  \\",
]
map[\\"3\\"] = [
	\\"¯|| \\",
	\\"-|| \\",
	\\"_|| \\",
]
map[\\"4\\"] = [
	\\" /|| \\",
	\\"/_|| \\",
	\\"  || \\",
]
map[\\"5\\"] = [
	\\"||¯¯ \\",
	\\" ¯|| \\",
	\\" _|| \\",
]
map[\\"6\\"] = [
	\\"||¯¯  \\",
	\\"||¯|| \\",
	\\"||_|| \\",
]
map[\\"7\\"] = [
	\\"¯¯// \\",
	\\" //  \\",
	\\"//   \\",
]
map[\\"8\\"] = [
	\\"||¯|| \\",
	\\"||-|| \\",
	\\"||_|| \\",
]
map[\\"9\\"] = [
	\\"||¯|| \\",
	\\"  ¯|| \\",
	\\"  //  \\",
]
map[\\" \\"] = [
	\\"  \\",
	\\"  \\",
	\\"  \\",
]

AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [
		[],
		[],
		[],
	]
	signs = self.MAP

	for char in str
		char = char.lower
		if signs.hasIndex(char) then
			r[0].push signs[char][0]
			r[1].push signs[char][1]
			r[2].push signs[char][2]
		end if
	end for

	if typeof(colors) == \\"string\\" then
		r[0] = [ \\"<color=#\\" + colors + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	else if typeof(colors) == \\"list\\" then
		r[0] = [ \\"<color=#\\" + colors[0] + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors[1] + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors[2] + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	end if

	return [
		r[0].join(\\"\\"),
		r[1].join(\\"\\"),
		r[2].join(\\"\\"),
	].join(\\"\\\\n\\")
end function

print AsciiGen.gen(\\"Hallo\\")

import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
print 123


print 6
print \\"sub-import.src\\"

\\"true\\"
//debugger

print 7
print \\"greybel-utils.src\\"

print \\"print \\"\\"1..\\"\\"
print \\"\\"2..\\"\\"
print \\"\\"3..\\"\\"
print \\"\\"hello world\\"\\"\\"",
  "myvar2 = \\"\\"foo\\"\\"",
  "lastimport = \\"hi\\"",
  "test = 123
was = 123
x = 123",
]
`;

exports[`parse default scripts greybel-utils.src uglify 1`] = `
Array [
  "globals.H=globals
H.AY=\\"||¯|| \\"
H.AX=\\"||_|| \\"
H.AU=\\"|| || \\"
H.AS=\\"||¯ \\"
H.AW=\\"||  \\"
H.AT=\\"||_ \\"
H.AZ=\\"||¯\\\\\\\\ \\"
H.Ae=\\"||¯¯  \\"
H.Af=\\"||-|| \\"
H.AV=\\"|| \\"
H.Ag=\\"||   || \\"
H.Ah=\\"||¯¯ \\"
H.Ai=\\" ||  \\"
H.Aj=\\" || \\"
H.Aa=\\"  \\"
H.Ak=0
H.Al=1
H.Am=2
H.Ab=\\"<color=#\\"
H.Ad=\\">\\"
H.Ac=\\"</color>\\"
H.An=\\"\\"
H.Ao=123
C={}
D={}
E=function(AB)
if (not C.hasIndex(AB)) then
exit(\\"Module \\"+AB+\\" cannot be found...\\")
end if
G=@C[AB]
return @G(AB).exports
end function
C[\\"B\\"]=function(AB)
G={}
if (D.hasIndex(AB)) then
G=D[AB]
end if
if (not G.hasIndex(\\"exports\\")) then
J={}
map={}
map.a=[AY,AX,AU]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[AS,AW,AT]
map.d=[AZ,\\"|| // \\",\\"||//  \\"]
map.e=[AS,\\"||- \\",AT]
map.f=[AS,AT,AW]
map.g=[Ae,\\"|| \\\\\\\\ \\",AX]
map.h=[AU,Af,AU]
map.i=[AV,AV,AV]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",AZ]
map.l=[AW,AW,AT]
map.m=[\\"||\\\\\\\\/|| \\",Ag,Ag]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[AY,AU,AX]
map.p=[AY,AX,\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[AY,AZ,AU]
map.s=[Ah,\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",Ai,Ai]
map.u=[AU,AU,AX]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",AT]
map[\\"0\\"]=[AY,\\"||x|| \\",AX]
map[\\"1\\"]=[\\"'|| \\",Aj,Aj]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[Ah,\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[Ae,AY,AX]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[AY,Af,AX]
map[\\"9\\"]=[AY,\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[Aa,Aa,Aa]
J.MAP=map
J.gen=function(str,AM)
AB=[[],[],[]]
AN=self.MAP
for char in str
char=char.lower
if (AN.hasIndex(char)) then
AB[Ak].push(AN[char][Ak])
AB[Al].push(AN[char][Al])
AB[Am].push(AN[char][Am])
end if
end for
if (typeof(AM)==\\"string\\") then
AB[Ak]=[Ab+AM+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM+Ad]+AB[Am]+[Ac]
else if (typeof(AM)==\\"list\\") then
AB[Ak]=[Ab+AM[Ak]+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM[Al]+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM[Am]+Ad]+AB[Am]+[Ac]
end if
return [AB[Ak].join(An),AB[Al].join(An),AB[Am].join(An)].join(\\"\\\\n\\")
end function
print(J.gen(\\"Hallo\\"))
end if
D[AB]=G
return D[AB]
end function
I=E(\\"B\\")
J={}
map={}
map.a=[AY,AX,AU]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[AS,AW,AT]
map.d=[AZ,\\"|| // \\",\\"||//  \\"]
map.e=[AS,\\"||- \\",AT]
map.f=[AS,AT,AW]
map.g=[Ae,\\"|| \\\\\\\\ \\",AX]
map.h=[AU,Af,AU]
map.i=[AV,AV,AV]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",AZ]
map.l=[AW,AW,AT]
map.m=[\\"||\\\\\\\\/|| \\",Ag,Ag]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[AY,AU,AX]
map.p=[AY,AX,\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[AY,AZ,AU]
map.s=[Ah,\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",Ai,Ai]
map.u=[AU,AU,AX]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",AT]
map[\\"0\\"]=[AY,\\"||x|| \\",AX]
map[\\"1\\"]=[\\"'|| \\",Aj,Aj]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[Ah,\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[Ae,AY,AX]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[AY,Af,AX]
map[\\"9\\"]=[AY,\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[Aa,Aa,Aa]
J.MAP=map
J.gen=function(str,AM)
AB=[[],[],[]]
AN=self.MAP
for char in str
char=char.lower
if (AN.hasIndex(char)) then
AB[Ak].push(AN[char][Ak])
AB[Al].push(AN[char][Al])
AB[Am].push(AN[char][Am])
end if
end for
if (typeof(AM)==\\"string\\") then
AB[Ak]=[Ab+AM+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM+Ad]+AB[Am]+[Ac]
else if (typeof(AM)==\\"list\\") then
AB[Ak]=[Ab+AM[Ak]+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM[Al]+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM[Am]+Ad]+AB[Am]+[Ac]
end if
return [AB[Ak].join(An),AB[Al].join(An),AB[Am].join(An)].join(\\"\\\\n\\")
end function
print(J.gen(\\"Hallo\\"))

import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
print(Ao)
print(6)
print(\\"sub-import.src\\")

\\"true\\"
//debugger
print(7)
print(\\"greybel-utils.src\\")
print(\\"print \\"\\"1..\\"\\"
print \\"\\"2..\\"\\"
print \\"\\"3..\\"\\"
print \\"\\"hello world\\"\\"\\")",
  "AO=\\"\\"foo\\"\\"",
  "AR=\\"hi\\"",
  "AP=Ao
AQ=Ao
AE=Ao",
]
`;

exports[`parse default scripts greybel-utils-with-comments.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if (not MODULES.hasIndex(r)) then
exit(\\"Module \\"+r+\\" cannot be found...\\")
end if
module=@MODULES[r]
return @module(r).exports
end function
MODULES[\\"B\\"]=function(r)
module={}
if (EXPORTED.hasIndex(r)) then
module=EXPORTED[r]
end if
if (not module.hasIndex(\\"exports\\")) then
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if (signs.hasIndex(char)) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors)==\\"string\\") then
r[0]=[\\"<color=#\\"+colors+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors+\\">\\"]+r[2]+[\\"</color>\\"]
else if (typeof(colors)==\\"list\\") then
r[0]=[\\"<color=#\\"+colors[0]+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors[1]+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors[2]+\\">\\"]+r[2]+[\\"</color>\\"]
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))
end if
EXPORTED[r]=module
return EXPORTED[r]
end function
foo = __REQUIRE(\\"B\\")
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if (signs.hasIndex(char)) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors)==\\"string\\") then
r[0]=[\\"<color=#\\"+colors+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors+\\">\\"]+r[2]+[\\"</color>\\"]
else if (typeof(colors)==\\"list\\") then
r[0]=[\\"<color=#\\"+colors[0]+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors[1]+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors[2]+\\">\\"]+r[2]+[\\"</color>\\"]
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))

import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
print(123)
print(6)
print(\\"sub-import.src\\")

\\"true\\"
//debugger",
  "myvar2=\\"\\"foo\\"\\"",
  "lastimport=\\"hi\\"",
  "test=123
was=123
x=123",
]
`;

exports[`parse default scripts greybel-utils-with-comments.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}
__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit \\"Module \\" + r + \\" cannot be found...\\"
	end if
	module = @MODULES[r]
	return @module(r).exports
end function
MODULES[\\"B\\"] = function(r)
	module = {}
	if EXPORTED.hasIndex(r) then
		module = EXPORTED[r]
	end if
	if not module.hasIndex(\\"exports\\") then
		AsciiGen = {}

map = {}

map.a = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"|| || \\",
]
map.b = [
	\\"||¯/ \\",
	\\"|| \\\\ \\",
	\\"||_/ \\",
]
map.c = [
	\\"||¯ \\",
	\\"||  \\",
	\\"||_ \\",
]
map.d = [
	\\"||¯\\\\\\\\ \\",
	\\"|| // \\",
	\\"||//  \\",
]
map.e = [
	\\"||¯ \\",
	\\"||- \\",
	\\"||_ \\",
]
map.f = [
	\\"||¯ \\",
	\\"||_ \\",
	\\"||  \\",
]
map.g = [
	\\"||¯¯  \\",
	\\"|| \\\\\\\\ \\",
	\\"||_|| \\",
]
map.h = [
	\\"|| || \\",
	\\"||-|| \\",
	\\"|| || \\",
]
map.i = [
	\\"|| \\",
	\\"|| \\",
	\\"|| \\",
]
map.j = [
	\\" ¯||¯ \\",
	\\"  ||  \\",
	\\"|_||  \\",
]
map.k = [
	\\"||  / \\",
	\\"|| /  \\",
	\\"||¯\\\\\\\\ \\",
]
map.l = [
	\\"||  \\",
	\\"||  \\",
	\\"||_ \\",
]
map.m = [
	\\"||\\\\\\\\/|| \\",
	\\"||   || \\",
	\\"||   || \\",
]
map.n = [
	\\"||\\\\\\\\ || \\",
	\\"|| \\\\\\\\|| \\",
	\\"||  \\\\|| \\",
]
map.o = [
	\\"||¯|| \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.p = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"||    \\",
]
map.q = [
	\\"||¯||  \\",
	\\"|| ||  \\",
	\\"||_||¬ \\",
]
map.r = [
	\\"||¯|| \\",
	\\"||¯\\\\\\\\ \\",
	\\"|| || \\",
]
map.s = [
	\\"||¯¯ \\",
	\\" \\\\\\\\  \\",
	\\"__|| \\",
]
map.t = [
	\\"¯||¯ \\",
	\\" ||  \\",
	\\" ||  \\",
]
map.u = [
	\\"|| || \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.v = [
	\\"\\\\\\\\ || \\",
	\\" \\\\\\\\|| \\",
	\\"  \\\\\\\\| \\",
]
map.w = [
	\\"\\\\\\\\ |\\\\\\\\ | \\",
	\\" \\\\\\\\| \\\\\\\\| \\",
	\\"  \\\\\\\\  \\\\\\\\ \\",
]
map.x = [
	\\"\\\\\\\\  / \\",
	\\" \\\\\\\\/  \\",
	\\" //\\\\  \\",
]
map.y = [
	\\"\\\\\\\\  // \\",
	\\" \\\\\\\\//  \\",
	\\"  ||   \\",
]
map.z = [
	\\"¯// \\",
	\\"//  \\",
	\\"||_ \\",
]
map[\\"0\\"] = [
	\\"||¯|| \\",
	\\"||x|| \\",
	\\"||_|| \\",
]
map[\\"1\\"] = [
	\\"'|| \\",
	\\" || \\",
	\\" || \\",
]
map[\\"2\\"] = [
	\\"¯¯|| \\",
	\\"||¯  \\",
	\\"||_  \\",
]
map[\\"3\\"] = [
	\\"¯|| \\",
	\\"-|| \\",
	\\"_|| \\",
]
map[\\"4\\"] = [
	\\" /|| \\",
	\\"/_|| \\",
	\\"  || \\",
]
map[\\"5\\"] = [
	\\"||¯¯ \\",
	\\" ¯|| \\",
	\\" _|| \\",
]
map[\\"6\\"] = [
	\\"||¯¯  \\",
	\\"||¯|| \\",
	\\"||_|| \\",
]
map[\\"7\\"] = [
	\\"¯¯// \\",
	\\" //  \\",
	\\"//   \\",
]
map[\\"8\\"] = [
	\\"||¯|| \\",
	\\"||-|| \\",
	\\"||_|| \\",
]
map[\\"9\\"] = [
	\\"||¯|| \\",
	\\"  ¯|| \\",
	\\"  //  \\",
]
map[\\" \\"] = [
	\\"  \\",
	\\"  \\",
	\\"  \\",
]

AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [
		[],
		[],
		[],
	]
	signs = self.MAP

	for char in str
		char = char.lower
		if signs.hasIndex(char) then
			r[0].push signs[char][0]
			r[1].push signs[char][1]
			r[2].push signs[char][2]
		end if
	end for

	if typeof(colors) == \\"string\\" then
		r[0] = [ \\"<color=#\\" + colors + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	else if typeof(colors) == \\"list\\" then
		r[0] = [ \\"<color=#\\" + colors[0] + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors[1] + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors[2] + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	end if

	return [
		r[0].join(\\"\\"),
		r[1].join(\\"\\"),
		r[2].join(\\"\\"),
	].join(\\"\\\\n\\")
end function

print AsciiGen.gen(\\"Hallo\\")
	end if
	EXPORTED[r] = module
	return EXPORTED[r]
end function
foo = __REQUIRE(\\"B\\")
AsciiGen = {}

map = {}

map.a = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"|| || \\",
]
map.b = [
	\\"||¯/ \\",
	\\"|| \\\\ \\",
	\\"||_/ \\",
]
map.c = [
	\\"||¯ \\",
	\\"||  \\",
	\\"||_ \\",
]
map.d = [
	\\"||¯\\\\\\\\ \\",
	\\"|| // \\",
	\\"||//  \\",
]
map.e = [
	\\"||¯ \\",
	\\"||- \\",
	\\"||_ \\",
]
map.f = [
	\\"||¯ \\",
	\\"||_ \\",
	\\"||  \\",
]
map.g = [
	\\"||¯¯  \\",
	\\"|| \\\\\\\\ \\",
	\\"||_|| \\",
]
map.h = [
	\\"|| || \\",
	\\"||-|| \\",
	\\"|| || \\",
]
map.i = [
	\\"|| \\",
	\\"|| \\",
	\\"|| \\",
]
map.j = [
	\\" ¯||¯ \\",
	\\"  ||  \\",
	\\"|_||  \\",
]
map.k = [
	\\"||  / \\",
	\\"|| /  \\",
	\\"||¯\\\\\\\\ \\",
]
map.l = [
	\\"||  \\",
	\\"||  \\",
	\\"||_ \\",
]
map.m = [
	\\"||\\\\\\\\/|| \\",
	\\"||   || \\",
	\\"||   || \\",
]
map.n = [
	\\"||\\\\\\\\ || \\",
	\\"|| \\\\\\\\|| \\",
	\\"||  \\\\|| \\",
]
map.o = [
	\\"||¯|| \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.p = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"||    \\",
]
map.q = [
	\\"||¯||  \\",
	\\"|| ||  \\",
	\\"||_||¬ \\",
]
map.r = [
	\\"||¯|| \\",
	\\"||¯\\\\\\\\ \\",
	\\"|| || \\",
]
map.s = [
	\\"||¯¯ \\",
	\\" \\\\\\\\  \\",
	\\"__|| \\",
]
map.t = [
	\\"¯||¯ \\",
	\\" ||  \\",
	\\" ||  \\",
]
map.u = [
	\\"|| || \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.v = [
	\\"\\\\\\\\ || \\",
	\\" \\\\\\\\|| \\",
	\\"  \\\\\\\\| \\",
]
map.w = [
	\\"\\\\\\\\ |\\\\\\\\ | \\",
	\\" \\\\\\\\| \\\\\\\\| \\",
	\\"  \\\\\\\\  \\\\\\\\ \\",
]
map.x = [
	\\"\\\\\\\\  / \\",
	\\" \\\\\\\\/  \\",
	\\" //\\\\  \\",
]
map.y = [
	\\"\\\\\\\\  // \\",
	\\" \\\\\\\\//  \\",
	\\"  ||   \\",
]
map.z = [
	\\"¯// \\",
	\\"//  \\",
	\\"||_ \\",
]
map[\\"0\\"] = [
	\\"||¯|| \\",
	\\"||x|| \\",
	\\"||_|| \\",
]
map[\\"1\\"] = [
	\\"'|| \\",
	\\" || \\",
	\\" || \\",
]
map[\\"2\\"] = [
	\\"¯¯|| \\",
	\\"||¯  \\",
	\\"||_  \\",
]
map[\\"3\\"] = [
	\\"¯|| \\",
	\\"-|| \\",
	\\"_|| \\",
]
map[\\"4\\"] = [
	\\" /|| \\",
	\\"/_|| \\",
	\\"  || \\",
]
map[\\"5\\"] = [
	\\"||¯¯ \\",
	\\" ¯|| \\",
	\\" _|| \\",
]
map[\\"6\\"] = [
	\\"||¯¯  \\",
	\\"||¯|| \\",
	\\"||_|| \\",
]
map[\\"7\\"] = [
	\\"¯¯// \\",
	\\" //  \\",
	\\"//   \\",
]
map[\\"8\\"] = [
	\\"||¯|| \\",
	\\"||-|| \\",
	\\"||_|| \\",
]
map[\\"9\\"] = [
	\\"||¯|| \\",
	\\"  ¯|| \\",
	\\"  //  \\",
]
map[\\" \\"] = [
	\\"  \\",
	\\"  \\",
	\\"  \\",
]

AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [
		[],
		[],
		[],
	]
	signs = self.MAP

	for char in str
		char = char.lower
		if signs.hasIndex(char) then
			r[0].push signs[char][0]
			r[1].push signs[char][1]
			r[2].push signs[char][2]
		end if
	end for

	if typeof(colors) == \\"string\\" then
		r[0] = [ \\"<color=#\\" + colors + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	else if typeof(colors) == \\"list\\" then
		r[0] = [ \\"<color=#\\" + colors[0] + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors[1] + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors[2] + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	end if

	return [
		r[0].join(\\"\\"),
		r[1].join(\\"\\"),
		r[2].join(\\"\\"),
	].join(\\"\\\\n\\")
end function

print AsciiGen.gen(\\"Hallo\\")

import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
print 123


print 6
print \\"sub-import.src\\"

\\"true\\"
//debugger",
  "myvar2 = \\"\\"foo\\"\\"",
  "lastimport = \\"hi\\"",
  "test = 123
was = 123
x = 123",
]
`;

exports[`parse default scripts greybel-utils-with-comments.src uglify 1`] = `
Array [
  "globals.H=globals
H.AY=\\"||¯|| \\"
H.AX=\\"||_|| \\"
H.AU=\\"|| || \\"
H.AS=\\"||¯ \\"
H.AW=\\"||  \\"
H.AT=\\"||_ \\"
H.AZ=\\"||¯\\\\\\\\ \\"
H.Ae=\\"||¯¯  \\"
H.Af=\\"||-|| \\"
H.AV=\\"|| \\"
H.Ag=\\"||   || \\"
H.Ah=\\"||¯¯ \\"
H.Ai=\\" ||  \\"
H.Aj=\\" || \\"
H.Aa=\\"  \\"
H.Ak=0
H.Al=1
H.Am=2
H.Ab=\\"<color=#\\"
H.Ad=\\">\\"
H.Ac=\\"</color>\\"
H.An=\\"\\"
H.Ao=123
C={}
D={}
E=function(AB)
if (not C.hasIndex(AB)) then
exit(\\"Module \\"+AB+\\" cannot be found...\\")
end if
G=@C[AB]
return @G(AB).exports
end function
C[\\"B\\"]=function(AB)
G={}
if (D.hasIndex(AB)) then
G=D[AB]
end if
if (not G.hasIndex(\\"exports\\")) then
J={}
map={}
map.a=[AY,AX,AU]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[AS,AW,AT]
map.d=[AZ,\\"|| // \\",\\"||//  \\"]
map.e=[AS,\\"||- \\",AT]
map.f=[AS,AT,AW]
map.g=[Ae,\\"|| \\\\\\\\ \\",AX]
map.h=[AU,Af,AU]
map.i=[AV,AV,AV]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",AZ]
map.l=[AW,AW,AT]
map.m=[\\"||\\\\\\\\/|| \\",Ag,Ag]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[AY,AU,AX]
map.p=[AY,AX,\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[AY,AZ,AU]
map.s=[Ah,\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",Ai,Ai]
map.u=[AU,AU,AX]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",AT]
map[\\"0\\"]=[AY,\\"||x|| \\",AX]
map[\\"1\\"]=[\\"'|| \\",Aj,Aj]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[Ah,\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[Ae,AY,AX]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[AY,Af,AX]
map[\\"9\\"]=[AY,\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[Aa,Aa,Aa]
J.MAP=map
J.gen=function(str,AM)
AB=[[],[],[]]
AN=self.MAP
for char in str
char=char.lower
if (AN.hasIndex(char)) then
AB[Ak].push(AN[char][Ak])
AB[Al].push(AN[char][Al])
AB[Am].push(AN[char][Am])
end if
end for
if (typeof(AM)==\\"string\\") then
AB[Ak]=[Ab+AM+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM+Ad]+AB[Am]+[Ac]
else if (typeof(AM)==\\"list\\") then
AB[Ak]=[Ab+AM[Ak]+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM[Al]+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM[Am]+Ad]+AB[Am]+[Ac]
end if
return [AB[Ak].join(An),AB[Al].join(An),AB[Am].join(An)].join(\\"\\\\n\\")
end function
print(J.gen(\\"Hallo\\"))
end if
D[AB]=G
return D[AB]
end function
I=E(\\"B\\")
J={}
map={}
map.a=[AY,AX,AU]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[AS,AW,AT]
map.d=[AZ,\\"|| // \\",\\"||//  \\"]
map.e=[AS,\\"||- \\",AT]
map.f=[AS,AT,AW]
map.g=[Ae,\\"|| \\\\\\\\ \\",AX]
map.h=[AU,Af,AU]
map.i=[AV,AV,AV]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",AZ]
map.l=[AW,AW,AT]
map.m=[\\"||\\\\\\\\/|| \\",Ag,Ag]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[AY,AU,AX]
map.p=[AY,AX,\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[AY,AZ,AU]
map.s=[Ah,\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",Ai,Ai]
map.u=[AU,AU,AX]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",AT]
map[\\"0\\"]=[AY,\\"||x|| \\",AX]
map[\\"1\\"]=[\\"'|| \\",Aj,Aj]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[Ah,\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[Ae,AY,AX]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[AY,Af,AX]
map[\\"9\\"]=[AY,\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[Aa,Aa,Aa]
J.MAP=map
J.gen=function(str,AM)
AB=[[],[],[]]
AN=self.MAP
for char in str
char=char.lower
if (AN.hasIndex(char)) then
AB[Ak].push(AN[char][Ak])
AB[Al].push(AN[char][Al])
AB[Am].push(AN[char][Am])
end if
end for
if (typeof(AM)==\\"string\\") then
AB[Ak]=[Ab+AM+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM+Ad]+AB[Am]+[Ac]
else if (typeof(AM)==\\"list\\") then
AB[Ak]=[Ab+AM[Ak]+Ad]+AB[Ak]+[Ac]
AB[Al]=[Ab+AM[Al]+Ad]+AB[Al]+[Ac]
AB[Am]=[Ab+AM[Am]+Ad]+AB[Am]+[Ac]
end if
return [AB[Ak].join(An),AB[Al].join(An),AB[Am].join(An)].join(\\"\\\\n\\")
end function
print(J.gen(\\"Hallo\\"))

import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
print(Ao)
print(6)
print(\\"sub-import.src\\")

\\"true\\"
//debugger",
  "AO=\\"\\"foo\\"\\"",
  "AR=\\"hi\\"",
  "AP=Ao
AQ=Ao
AE=Ao",
]
`;

exports[`parse default scripts has-index.src 1`] = `
Array [
  "globals.test=\\"was\\"
locals.foo=\\"moo\\"
print(globals.hasIndex(\\"test\\"))
print(locals.hasIndex(\\"foo\\"))
print(globals.hasIndex(\\"doesNotExist\\"))
print(locals.hasIndex(\\"doesNotExist\\"))",
]
`;

exports[`parse default scripts has-index.src beautify 1`] = `
Array [
  "globals.test = \\"was\\"
locals.foo = \\"moo\\"

print globals.hasIndex(\\"test\\")
print locals.hasIndex(\\"foo\\")
print globals.hasIndex(\\"doesNotExist\\")
print locals.hasIndex(\\"doesNotExist\\")",
]
`;

exports[`parse default scripts has-index.src uglify 1`] = `
Array [
  "H.I=\\"was\\"
locals.J=\\"moo\\"
print(H.hasIndex(\\"I\\"))
print(locals.hasIndex(\\"J\\"))
print(H.hasIndex(\\"doesNotExist\\"))
print(locals.hasIndex(\\"doesNotExist\\"))",
]
`;

exports[`parse default scripts import-code.src 1`] = `
Array [
  "import_code(\\"/scripts/ascii.src\\")
import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
import_code(\\"/fixtures/sub-import.src\\")
print(123)",
  "AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if (signs.hasIndex(char)) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors)==\\"string\\") then
r[0]=[\\"<color=#\\"+colors+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors+\\">\\"]+r[2]+[\\"</color>\\"]
else if (typeof(colors)==\\"list\\") then
r[0]=[\\"<color=#\\"+colors[0]+\\">\\"]+r[0]+[\\"</color>\\"]
r[1]=[\\"<color=#\\"+colors[1]+\\">\\"]+r[1]+[\\"</color>\\"]
r[2]=[\\"<color=#\\"+colors[2]+\\">\\"]+r[2]+[\\"</color>\\"]
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))",
  "myvar2=\\"\\"foo\\"\\"",
  "lastimport=\\"hi\\"",
  "test=123
was=123
x=123",
  "print(123)
print(6)
print(\\"sub-import.src\\")",
]
`;

exports[`parse default scripts import-code.src beautify 1`] = `
Array [
  "import_code(\\"/scripts/ascii.src\\")
import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
import_code(\\"/fixtures/sub-import.src\\")
print 123",
  "AsciiGen = {}

map = {}

map.a = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"|| || \\",
]
map.b = [
	\\"||¯/ \\",
	\\"|| \\\\ \\",
	\\"||_/ \\",
]
map.c = [
	\\"||¯ \\",
	\\"||  \\",
	\\"||_ \\",
]
map.d = [
	\\"||¯\\\\\\\\ \\",
	\\"|| // \\",
	\\"||//  \\",
]
map.e = [
	\\"||¯ \\",
	\\"||- \\",
	\\"||_ \\",
]
map.f = [
	\\"||¯ \\",
	\\"||_ \\",
	\\"||  \\",
]
map.g = [
	\\"||¯¯  \\",
	\\"|| \\\\\\\\ \\",
	\\"||_|| \\",
]
map.h = [
	\\"|| || \\",
	\\"||-|| \\",
	\\"|| || \\",
]
map.i = [
	\\"|| \\",
	\\"|| \\",
	\\"|| \\",
]
map.j = [
	\\" ¯||¯ \\",
	\\"  ||  \\",
	\\"|_||  \\",
]
map.k = [
	\\"||  / \\",
	\\"|| /  \\",
	\\"||¯\\\\\\\\ \\",
]
map.l = [
	\\"||  \\",
	\\"||  \\",
	\\"||_ \\",
]
map.m = [
	\\"||\\\\\\\\/|| \\",
	\\"||   || \\",
	\\"||   || \\",
]
map.n = [
	\\"||\\\\\\\\ || \\",
	\\"|| \\\\\\\\|| \\",
	\\"||  \\\\|| \\",
]
map.o = [
	\\"||¯|| \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.p = [
	\\"||¯|| \\",
	\\"||_|| \\",
	\\"||    \\",
]
map.q = [
	\\"||¯||  \\",
	\\"|| ||  \\",
	\\"||_||¬ \\",
]
map.r = [
	\\"||¯|| \\",
	\\"||¯\\\\\\\\ \\",
	\\"|| || \\",
]
map.s = [
	\\"||¯¯ \\",
	\\" \\\\\\\\  \\",
	\\"__|| \\",
]
map.t = [
	\\"¯||¯ \\",
	\\" ||  \\",
	\\" ||  \\",
]
map.u = [
	\\"|| || \\",
	\\"|| || \\",
	\\"||_|| \\",
]
map.v = [
	\\"\\\\\\\\ || \\",
	\\" \\\\\\\\|| \\",
	\\"  \\\\\\\\| \\",
]
map.w = [
	\\"\\\\\\\\ |\\\\\\\\ | \\",
	\\" \\\\\\\\| \\\\\\\\| \\",
	\\"  \\\\\\\\  \\\\\\\\ \\",
]
map.x = [
	\\"\\\\\\\\  / \\",
	\\" \\\\\\\\/  \\",
	\\" //\\\\  \\",
]
map.y = [
	\\"\\\\\\\\  // \\",
	\\" \\\\\\\\//  \\",
	\\"  ||   \\",
]
map.z = [
	\\"¯// \\",
	\\"//  \\",
	\\"||_ \\",
]
map[\\"0\\"] = [
	\\"||¯|| \\",
	\\"||x|| \\",
	\\"||_|| \\",
]
map[\\"1\\"] = [
	\\"'|| \\",
	\\" || \\",
	\\" || \\",
]
map[\\"2\\"] = [
	\\"¯¯|| \\",
	\\"||¯  \\",
	\\"||_  \\",
]
map[\\"3\\"] = [
	\\"¯|| \\",
	\\"-|| \\",
	\\"_|| \\",
]
map[\\"4\\"] = [
	\\" /|| \\",
	\\"/_|| \\",
	\\"  || \\",
]
map[\\"5\\"] = [
	\\"||¯¯ \\",
	\\" ¯|| \\",
	\\" _|| \\",
]
map[\\"6\\"] = [
	\\"||¯¯  \\",
	\\"||¯|| \\",
	\\"||_|| \\",
]
map[\\"7\\"] = [
	\\"¯¯// \\",
	\\" //  \\",
	\\"//   \\",
]
map[\\"8\\"] = [
	\\"||¯|| \\",
	\\"||-|| \\",
	\\"||_|| \\",
]
map[\\"9\\"] = [
	\\"||¯|| \\",
	\\"  ¯|| \\",
	\\"  //  \\",
]
map[\\" \\"] = [
	\\"  \\",
	\\"  \\",
	\\"  \\",
]

AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [
		[],
		[],
		[],
	]
	signs = self.MAP

	for char in str
		char = char.lower
		if signs.hasIndex(char) then
			r[0].push signs[char][0]
			r[1].push signs[char][1]
			r[2].push signs[char][2]
		end if
	end for

	if typeof(colors) == \\"string\\" then
		r[0] = [ \\"<color=#\\" + colors + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	else if typeof(colors) == \\"list\\" then
		r[0] = [ \\"<color=#\\" + colors[0] + \\">\\" ] + r[0] + [ \\"</color>\\" ]
		r[1] = [ \\"<color=#\\" + colors[1] + \\">\\" ] + r[1] + [ \\"</color>\\" ]
		r[2] = [ \\"<color=#\\" + colors[2] + \\">\\" ] + r[2] + [ \\"</color>\\" ]
	end if

	return [
		r[0].join(\\"\\"),
		r[1].join(\\"\\"),
		r[2].join(\\"\\"),
	].join(\\"\\\\n\\")
end function

print AsciiGen.gen(\\"Hallo\\")",
  "myvar2 = \\"\\"foo\\"\\"",
  "lastimport = \\"hi\\"",
  "test = 123
was = 123
x = 123",
  "print 123


print 6
print \\"sub-import.src\\"",
]
`;

exports[`parse default scripts import-code.src uglify 1`] = `
Array [
  "globals.H=globals
H.Ad=123
H.AX=\\"||¯|| \\"
H.AW=\\"||_|| \\"
H.AT=\\"|| || \\"
H.AR=\\"||¯ \\"
H.AV=\\"||  \\"
H.AS=\\"||_ \\"
H.AY=\\"||¯\\\\\\\\ \\"
H.AU=\\"|| \\"
H.AZ=\\"  \\"
H.Aa=\\"<color=#\\"
H.Ac=\\">\\"
H.Ab=\\"</color>\\"
import_code(\\"/scripts/ascii.src\\")
import_code(\\"/fixtures/envar-include.src\\")
import_code(\\"/fixtures/sub-sub-sub-import.src\\")
import_code(\\"/fixtures/sub-sub-import.src\\")
import_code(\\"/fixtures/sub-import.src\\")
print(Ad)",
  "I={}
map={}
map.a=[AX,AW,AT]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[AR,AV,AS]
map.d=[AY,\\"|| // \\",\\"||//  \\"]
map.e=[AR,\\"||- \\",AS]
map.f=[AR,AS,AV]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",AW]
map.h=[AT,\\"||-|| \\",AT]
map.i=[AU,AU,AU]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",AY]
map.l=[AV,AV,AS]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[AX,AT,AW]
map.p=[AX,AW,\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[AX,AY,AT]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[AT,AT,AW]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",AS]
map[\\"0\\"]=[AX,\\"||x|| \\",AW]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",AX,AW]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[AX,\\"||-|| \\",AW]
map[\\"9\\"]=[AX,\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[AZ,AZ,AZ]
I.MAP=map
I.gen=function(str,AL)
AG=[[],[],[]]
AM=self.MAP
for char in str
char=char.lower
if (AM.hasIndex(char)) then
AG[0].push(AM[char][0])
AG[1].push(AM[char][1])
AG[2].push(AM[char][2])
end if
end for
if (typeof(AL)==\\"string\\") then
AG[0]=[Aa+AL+Ac]+AG[0]+[Ab]
AG[1]=[Aa+AL+Ac]+AG[1]+[Ab]
AG[2]=[Aa+AL+Ac]+AG[2]+[Ab]
else if (typeof(AL)==\\"list\\") then
AG[0]=[Aa+AL[0]+Ac]+AG[0]+[Ab]
AG[1]=[Aa+AL[1]+Ac]+AG[1]+[Ab]
AG[2]=[Aa+AL[2]+Ac]+AG[2]+[Ab]
end if
return [AG[0].join(\\"\\"),AG[1].join(\\"\\"),AG[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(I.gen(\\"Hallo\\"))",
  "AN=\\"\\"foo\\"\\"",
  "AQ=\\"hi\\"",
  "AO=Ad
AP=Ad
AD=Ad",
  "print(Ad)
print(6)
print(\\"sub-import.src\\")",
]
`;

exports[`parse default scripts isa.src 1`] = `
Array [
  "print(2 isa number)
print(2 isa string)
print(2 isa list)
print(2 isa map)
print(\\"abc\\" isa number)
print(\\"abc\\" isa string)
print(\\"abc\\" isa list)
print(\\"abc\\" isa map)
print([1,2,3] isa number)
print([1,2,3] isa string)
print([1,2,3] isa list)
print([1,2,3] isa map)
print({} isa number)
print({} isa string)
print({} isa list)
print({} isa map)
print({} isa funcRef)",
]
`;

exports[`parse default scripts isa.src beautify 1`] = `
Array [
  "print 2 isa number
print 2 isa string
print 2 isa list
print 2 isa map

print \\"abc\\" isa number
print \\"abc\\" isa string
print \\"abc\\" isa list
print \\"abc\\" isa map

print [
	1,
	2,
	3,
] isa number
print [
	1,
	2,
	3,
] isa string
print [
	1,
	2,
	3,
] isa list
print [
	1,
	2,
	3,
] isa map

print {} isa number
print {} isa string
print {} isa list
print {} isa map

print {} isa funcRef
",
]
`;

exports[`parse default scripts isa.src uglify 1`] = `
Array [
  "globals.H=globals
H.I=\\"abc\\"
print(2 isa number)
print(2 isa string)
print(2 isa list)
print(2 isa map)
print(I isa number)
print(I isa string)
print(I isa list)
print(I isa map)
print([1,2,3] isa number)
print([1,2,3] isa string)
print([1,2,3] isa list)
print([1,2,3] isa map)
print({} isa number)
print({} isa string)
print({} isa list)
print({} isa map)
print({} isa funcRef)",
]
`;

exports[`parse default scripts map.src 1`] = `
Array [
  "test={{\\"myTest\\":0,1:2}:true}
test2={[12,14]:true}
test3={test:234}
test4={true:\\"foo\\"}
test5={123:\\"bar\\"}",
]
`;

exports[`parse default scripts map.src beautify 1`] = `
Array [
  "test = { {
	\\"myTest\\": 0,
	1: 2,
}: true }
test2 = { [
	12,
	14,
]: true }
test3 = { test: 234 }
test4 = { true: \\"foo\\" }
test5 = { 123: \\"bar\\" }",
]
`;

exports[`parse default scripts map.src uglify 1`] = `
Array [
  "globals.H=globals
H.N=true
I={{\\"myTest\\":0,1:2}:N}
J={[12,14]:N}
K={I:234}
L={N:\\"foo\\"}
M={123:\\"bar\\"}",
]
`;

exports[`parse default scripts multiline-comment.src 1`] = `
Array [
  "//
//
//
//my Test
//
//  **
print(\\"test\\")
//
//
//  another comment
//
//  
// one line comment ",
]
`;

exports[`parse default scripts multiline-comment.src beautify 1`] = `
Array [
  "//
//
//
//my Test
//
//  **
print \\"test\\" //
//
//  another comment
//
// // one line comment",
]
`;

exports[`parse default scripts multiline-comment.src uglify 1`] = `
Array [
  "print(\\"test\\")",
]
`;

exports[`parse default scripts negation.src 1`] = `
Array [
  "test=-1+2+-2+3
foo=[-1,-2+4,(-2)+-4+6]
print(test)
print(foo)",
]
`;

exports[`parse default scripts negation.src beautify 1`] = `
Array [
  "test = -1 + 2 + -2 + 3
foo = [
	-1,
	-2 + 4,
	(-2) + -4 + 6,
]

print test
print foo",
]
`;

exports[`parse default scripts negation.src uglify 1`] = `
Array [
  "I=-1+2+-2+3
J=[-1,-2+4,(-2)+-4+6]
print(I)
print(J)",
]
`;

exports[`parse default scripts obj-init.src 1`] = `
Array [
  "valueOfIdentifier=\\"foo\\"
myObject={\\"test\\":{\\"another\\":\\"123\\"},\\"value\\":\\"123\\",\\"idtf\\":valueOfIdentifier}
print([myObject.test.another,myObject.value,myObject.idtf])
myList=[{\\"another\\":\\"123\\"},\\"123\\",valueOfIdentifier]
print(myList)",
]
`;

exports[`parse default scripts obj-init.src beautify 1`] = `
Array [
  "valueOfIdentifier = \\"foo\\"

myObject = {
	\\"test\\": { \\"another\\": \\"123\\" },
	\\"value\\": \\"123\\",
	\\"idtf\\": valueOfIdentifier,
}

print [
	myObject.test.another,
	myObject.value,
	myObject.idtf,
]

myList = [
	{ \\"another\\": \\"123\\" },
	\\"123\\",
	valueOfIdentifier,
]

print myList",
]
`;

exports[`parse default scripts obj-init.src uglify 1`] = `
Array [
  "globals.H=globals
H.P=\\"123\\"
I=\\"foo\\"
J={\\"test\\":{\\"another\\":P},\\"value\\":P,\\"idtf\\":I}
print([J.test.another,J.value,J.idtf])
O=[{\\"another\\":P},P,I]
print(O)",
]
`;

exports[`parse default scripts optimize.src 1`] = `
Array [
  "test=function(abc)
print(abc)
end function
superlangername=function(abc)
print(abc)
end function
superlangername3=function(abc)
print(abc)
end function
superlangername4=function(abc)
print(abc)
end function
superlangername5=function(abc)
print(abc)
end function
test(\\"xxxxxxxxxx\\")
superlangername(\\"xxxxxxxxxx\\")
superlangername4(\\"xxxxxxxxxx\\")
superlangername(\\"xxxxxxxxxx\\")
superlangername5(\\"xxxxxxxxxx\\")
superlangername3(\\"xxxxxxxxxx\\")",
]
`;

exports[`parse default scripts optimize.src beautify 1`] = `
Array [
  "test = function(abc)
	print abc
end function

superlangername = function(abc)
	print abc
end function

superlangername3 = function(abc)
	print abc
end function

superlangername4 = function(abc)
	print abc
end function

superlangername5 = function(abc)
	print abc
end function

test \\"xxxxxxxxxx\\"
superlangername \\"xxxxxxxxxx\\"
superlangername4 \\"xxxxxxxxxx\\"
superlangername \\"xxxxxxxxxx\\"
superlangername5 \\"xxxxxxxxxx\\"
superlangername3 \\"xxxxxxxxxx\\"",
]
`;

exports[`parse default scripts optimize.src uglify 1`] = `
Array [
  "globals.H=globals
H.O=\\"xxxxxxxxxx\\"
I=function(N)
print(N)
end function
J=function(N)
print(N)
end function
K=function(N)
print(N)
end function
L=function(N)
print(N)
end function
M=function(N)
print(N)
end function
I(O)
J(O)
L(O)
J(O)
M(O)
K(O)",
]
`;

exports[`parse default scripts outer.src 1`] = `
Array [
  "main=function
num=0
iterate=function
clear_screen
text=\\"<mark=green><color=black>\\"+outer.num
print(outer.hasIndex(\\"num\\"))
if (outer.num>20) then text=\\"<mark=yellow><color=green>\\"+outer.num
if (outer.num>40) then text=\\"<mark=red><color=yellow>\\"+outer.num
if (outer.num<-20) then text=\\"<mark=green><color=yellow>\\"+outer.num
if (outer.num<-40) then text=\\"<mark=yellow><color=red>\\"+outer.num
print(text)
key=user_input(\\"test\\",false,true)
if (key==\\"UpArrow\\") then
outer.num=outer.num+(1)
else if (key==\\"DownArrow\\") then
outer.num=outer.num-(1)
else
exit(\\"bye\\")
end if
end function
while (true)
iterate
end while
end function
main",
]
`;

exports[`parse default scripts outer.src beautify 1`] = `
Array [
  "main = function
	num = 0
	iterate = function
		clear_screen

		text = \\"<mark=green><color=black>\\" + outer.num

		print outer.hasIndex(\\"num\\")

		if outer.num > 20 then text = \\"<mark=yellow><color=green>\\" + outer.num
		if outer.num > 40 then text = \\"<mark=red><color=yellow>\\" + outer.num
		if outer.num < -20 then text = \\"<mark=green><color=yellow>\\" + outer.num
		if outer.num < -40 then text = \\"<mark=yellow><color=red>\\" + outer.num

		print text
		key = user_input(\\"test\\", false, true)

		if key == \\"UpArrow\\" then
			outer.num = outer.num + (1)
		else if key == \\"DownArrow\\" then
			outer.num = outer.num - (1)
		else
			exit \\"bye\\"
		end if
	end function

	while (true)
		iterate
	end while
end function

main",
]
`;

exports[`parse default scripts outer.src uglify 1`] = `
Array [
  "I=function
J=0
K=function
clear_screen
L=\\"<mark=green><color=black>\\"+outer.J
print(outer.hasIndex(\\"J\\"))
if (outer.J>20) then L=\\"<mark=yellow><color=green>\\"+outer.J
if (outer.J>40) then L=\\"<mark=red><color=yellow>\\"+outer.J
if (outer.J<-20) then L=\\"<mark=green><color=yellow>\\"+outer.J
if (outer.J<-40) then L=\\"<mark=yellow><color=red>\\"+outer.J
print(L)
M=user_input(\\"test\\",false,true)
if (M==\\"UpArrow\\") then
outer.J=outer.J+(1)
else if (M==\\"DownArrow\\") then
outer.J=outer.J-(1)
else
exit(\\"bye\\")
end if
end function
while (true)
K
end while
end function
I",
]
`;

exports[`parse default scripts password-generator.src 1`] = `
Array [
  "PasswordGenerator={}
PasswordGenerator.MAX_PASSWORD_LENGTH=15
PasswordGenerator.ALPHABETIC_CHARACTERS=\\"qwertzuiopasdfghjklyxcvbnm\\"
PasswordGenerator.NUMBER_CHARACTERS=\\"0123456789\\"
PasswordGenerator.ALPHA_NUMERIC=PasswordGenerator.ALPHABETIC_CHARACTERS+PasswordGenerator.ALPHABETIC_CHARACTERS.upper+PasswordGenerator.NUMBER_CHARACTERS
PasswordGenerator.constructor=function
me=self
me.buffer=[0]
me.characters=me.ALPHA_NUMERIC
return me
end function
PasswordGenerator.increaseBuffer=function(i)
me=self
currentCharBuffer=me.buffer
maxBufferSize=me.characters.len
if (i==null) then i=currentCharBuffer.len-1
p=currentCharBuffer[i]
p=p+1
currentCharBuffer[i]=p
if (p==maxBufferSize) then
currentCharBuffer[i]=0
if (i==0) then
currentCharBuffer.push(0)
else
me.increaseBuffer(i-1)
end if
end if
end function
PasswordGenerator.gen=function
me=self
currentCharBuffer=me.buffer
generatorCharacters=me.characters
password=\\"\\"
index=0
while index<currentCharBuffer.len
pointer=currentCharBuffer[index]
password=password+generatorCharacters[pointer]
if (index==currentCharBuffer.len-1) then self.increaseBuffer
index=index+1
end while
if (currentCharBuffer.len>me.MAX_PASSWORD_LENGTH) then
return null
end if
return password
end function
pgen=(new PasswordGenerator).constructor
index=0
max=10
result=[]
while (index<max)
result.push(pgen.gen)
index=index+1
end while
print(result)",
]
`;

exports[`parse default scripts password-generator.src beautify 1`] = `
Array [
  "PasswordGenerator = {}

PasswordGenerator.MAX_PASSWORD_LENGTH = 15
PasswordGenerator.ALPHABETIC_CHARACTERS = \\"qwertzuiopasdfghjklyxcvbnm\\"
PasswordGenerator.NUMBER_CHARACTERS = \\"0123456789\\"
PasswordGenerator.ALPHA_NUMERIC = PasswordGenerator.ALPHABETIC_CHARACTERS + PasswordGenerator.ALPHABETIC_CHARACTERS.upper + PasswordGenerator.NUMBER_CHARACTERS

PasswordGenerator.constructor = function
	me = self
	me.buffer = [ 0 ]
	me.characters = me.ALPHA_NUMERIC
	return me
end function

PasswordGenerator.increaseBuffer = function(i)
	me = self
	currentCharBuffer = me.buffer
	maxBufferSize = me.characters.len
	if i == null then i = currentCharBuffer.len - 1
	p = currentCharBuffer[i]
	p = p + 1
	currentCharBuffer[i] = p
	if p == maxBufferSize then
		currentCharBuffer[i] = 0
		if i == 0 then
			currentCharBuffer.push 0
		else
			me.increaseBuffer i - 1
		end if
	end if
end function

PasswordGenerator.gen = function
	me = self
	currentCharBuffer = me.buffer
	generatorCharacters = me.characters
	password = \\"\\"
	index = 0

	while index < currentCharBuffer.len
		pointer = currentCharBuffer[index]
		password = password + generatorCharacters[pointer]
		if index == currentCharBuffer.len - 1 then self.increaseBuffer
		index = index + 1
	end while

	if currentCharBuffer.len > me.MAX_PASSWORD_LENGTH then
		return null
	end if

	return password
end function

pgen = (new PasswordGenerator).constructor

index = 0
max = 10
result = []

while (index < max)
	result.push pgen.gen
	index = index + 1
end while

print result",
]
`;

exports[`parse default scripts password-generator.src uglify 1`] = `
Array [
  "I={}
I.MAX_PASSWORD_LENGTH=15
I.ALPHABETIC_CHARACTERS=\\"qwertzuiopasdfghjklyxcvbnm\\"
I.NUMBER_CHARACTERS=\\"0123456789\\"
I.ALPHA_NUMERIC=I.ALPHABETIC_CHARACTERS+I.ALPHABETIC_CHARACTERS.upper+I.NUMBER_CHARACTERS
I.constructor=function
U=self
U.buffer=[0]
U.characters=U.ALPHA_NUMERIC
return U
end function
I.increaseBuffer=function(X)
U=self
Y=U.buffer
Z=U.characters.len
if (X==null) then X=Y.len-1
a=Y[X]
a=a+1
Y[X]=a
if (a==Z) then
Y[X]=0
if (X==0) then
Y.push(0)
else
U.increaseBuffer(X-1)
end if
end if
end function
I.gen=function
U=self
Y=U.buffer
b=U.characters
c=\\"\\"
R=0
while R<Y.len
d=Y[R]
c=c+b[d]
if (R==Y.len-1) then self.increaseBuffer
R=R+1
end while
if (Y.len>U.MAX_PASSWORD_LENGTH) then
return null
end if
return c
end function
Q=(new I).constructor
R=0
S=10
T=[]
while (R<S)
T.push(Q.gen)
R=R+1
end while
print(T)",
]
`;

exports[`parse default scripts pseudo-crypto.src 1`] = `
Array [
  "String={}
String.constructor=function(str)
self.str=str
return self
end function
String.parse=function(values)
result=self.str
index=0
maxIndex=values.len
while index<maxIndex
result=result.replace(\\"$\\"+index,values[index])
index=index+1
end while
return (new self).constructor(result)
end function
String.startsWith=function(str)
return self.str.indexOf(str)==0
end function
String.substr=function(startIndex,endIndex)
return (new self).constructor(slice(self.str,startIndex,endIndex))
end function
String.indexOf=function(str)
return self.str.indexOf(str)
end function
String.replace=function(str,newStr)
return (new self).constructor(self.str.replace(str,newStr))
end function
String.remove=function(str)
return (new self).constructor(self.str.remove(str))
end function
String.toString=function
return self.str
end function
String.length=function
return self.str.len
end function
String.split=function(seperator)
return self.str.split(seperator)
end function
String.trim=function(seperator)
return (new self).constructor(self.str.trim)
end function
Error={}
Error.String=String
Error.constructor=function(message,values)
m=self
m.message=message
if (values!=null) then
m.message=(new m.String).constructor(message).parse(values).toString
end if
return m
end function
Error.throw=function
exit(\\"<color=#ff0000>\\"+self.message+\\"</color>\\")
end function
Crypto={}
Crypto.defaultCharset=\\"QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm1234567890+-\\"
Crypto.defaultSecret=\\"test123\\"
Crypto.maxCharCode=55295
Crypto.Error=Error
Crypto.constructor=function(defaultSecret,hashFn,charset)
me=self
me.defaultSecret=defaultSecret
me.table=charset
me.hashFn=@hashFn
if (@hashFn==null) then me.hashFn=@md5
if charset==null then me.table=me.defaultCharset
if me.table.len!=64 then (new me.Error).constructor(\\"Invalid charset $0...\\",[me.table]).throw
return me
end function
Crypto.getHash=function(pw)
me=self
hash=[]
x=me.hashFn(pw)
for char in x
hash.push(char.code)
end for
hash.reverse
return hash
end function
Crypto.encrypt=function(str,pw)
me=self
if (pw==null) then pw=me.defaultSecret
hash=me.getHash(pw)
hashPointer=0
output=[]
position=0
padding=str.len%3
max=str.len-padding
get=function(v)
if (not me.table.hasIndex(v)) then
(new me.Error).constructor(\\"Invalid index $0...\\",[v]).throw
end if
return me.table[v]
end function
AND=function(a,b)
return bitwise(\\"&\\",a,b)
end function
LSHIFT=function(a,b)
return bitwise(\\"<<\\",a,b)
end function
RSHIFT=function(a,b)
return bitwise(\\">>\\",a,b)
end function
while position<max
m=hash[position%hash.len-1]
a=LSHIFT(str[position].code+m,16)
b=LSHIFT(str[position+1].code+m,8)
c=str[position+2].code+m
buffer=a+b+c
output.push(get(AND(RSHIFT(buffer,18),63)))
output.push(get(AND(RSHIFT(buffer,12),63)))
output.push(get(AND(RSHIFT(buffer,6),63)))
output.push(get(AND(buffer,63)))
position=position+3
end while
if (padding==2) then
m=hash[position%hash.len-1]
a=LSHIFT(str[position].code+m,8)
b=str[position+1].code+m
buffer=a+b
output.push(get(RSHIFT(buffer,10)))
output.push(get(AND(RSHIFT(buffer,4),63)))
output.push(get(AND(LSHIFT(buffer,2),63)))
output.push(\\"=\\")
else if (padding==1) then
m=hash[position%hash.len-1]
buffer=str[position].code+m
output.push(get(RSHIFT(buffer,2)))
output.push(get(AND(LSHIFT(buffer,4),63)))
output.push(\\"==\\")
end if
return output.join(\\"\\")
end function
Crypto.decrypt=function(str,pw)
me=self
if (pw==null) then pw=me.defaultSecret
hash=me.getHash(pw)
hashPointer=0
hashLength=hash.len
output=[]
bitCounter=0
bitStorage=0
position=0
hashPointer=0
max=str.len
AND=function(a,b)
return bitwise(\\"&\\",a,b)
end function
RSHIFT=function(a,b)
return bitwise(\\">>\\",a,b)
end function
while position<max
buffer=me.table.indexOf(str[position])
currentBit=bitCounter
bitCounter=bitCounter+1
if (currentBit%4) then
bitStorage=bitStorage*64+buffer
else
bitStorage=buffer
end if
if (currentBit%4) then
expectedHashIndex=(floor(hashPointer/3)*3)%hashLength-1
if (not hash.hasIndex(expectedHashIndex)) then break
m=hash[expectedHashIndex]
operation=AND(-2*bitCounter,6)
operation=RSHIFT(bitStorage,operation)
operation=AND(255,operation)
if (operation!=0) then
charCode=operation-m
if (charCode>me.maxCharCode) then break
output.push(char(charCode))
end if
hashPointer=hashPointer+1
end if
position=position+1
end while
return output.join(\\"\\")
end function
test=(new Crypto).constructor(\\"test\\")
pwd=\\"abcde\\"
foo=test.encrypt(pwd)
decrypted=test.decrypt(foo)
print(foo)
print(decrypted)",
]
`;

exports[`parse default scripts pseudo-crypto.src beautify 1`] = `
Array [
  "String = {}

String.constructor = function(str)
	self.str = str
	return self
end function

String.parse = function(values)
	result = self.str
	index = 0
	maxIndex = values.len

	while index < maxIndex
		result = result.replace(\\"$\\" + index, values[index])
		index = index + 1
	end while

	return (new self).constructor(result)
end function

String.startsWith = function(str)
	return self.str.indexOf(str) == 0
end function

String.substr = function(startIndex, endIndex)
	return (new self).constructor(slice(self.str, startIndex, endIndex))
end function

String.indexOf = function(str)
	return self.str.indexOf(str)
end function

String.replace = function(str, newStr)
	return (new self).constructor(self.str.replace(str, newStr))
end function

String.remove = function(str)
	return (new self).constructor(self.str.remove(str))
end function

String.toString = function
	return self.str
end function

String.length = function
	return self.str.len
end function

String.split = function(seperator)
	return self.str.split(seperator)
end function

String.trim = function(seperator)
	return (new self).constructor(self.str.trim)
end function

Error = {}

Error.String = String

Error.constructor = function(message, values)
	m = self
	m.message = message
	if values != null then
		m.message = (new m.String).constructor(message).parse(values).toString
	end if
	return m
end function

Error.throw = function
	exit \\"<color=#ff0000>\\" + self.message + \\"</color>\\"
end function

Crypto = {}

Crypto.defaultCharset = \\"QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm1234567890+-\\"
Crypto.defaultSecret = \\"test123\\"
Crypto.maxCharCode = 55295
Crypto.Error = Error

Crypto.constructor = function(defaultSecret, hashFn, charset)
	me = self
	me.defaultSecret = defaultSecret
	me.table = charset
	me.hashFn = @hashFn
	if @hashFn == null then me.hashFn = @md5
	if charset == null then me.table = me.defaultCharset
	if me.table.len != 64 then (new me.Error).constructor(\\"Invalid charset $0...\\", [ me.table ]).throw
	return me
end function

Crypto.getHash = function(pw)
	me = self
	hash = []
	x = me.hashFn(pw)
	for char in x
		hash.push char.code
	end for
	hash.reverse
	return hash
end function

Crypto.encrypt = function(str, pw)
	me = self
	if pw == null then pw = me.defaultSecret
	hash = me.getHash(pw)
	hashPointer = 0
	output = []
	position = 0
	padding = str.len % 3
	max = str.len - padding
	get = function(v)
		if not me.table.hasIndex(v) then
			(new me.Error).constructor(\\"Invalid index $0...\\", [ v ]).throw
		end if
		return me.table[v]
	end function
	AND = function(a, b)
		return bitwise(\\"&\\", a, b)
	end function
	LSHIFT = function(a, b)
		return bitwise(\\"<<\\", a, b)
	end function
	RSHIFT = function(a, b)
		return bitwise(\\">>\\", a, b)
	end function
	while position < max
		m = hash[position % hash.len - 1]
		a = LSHIFT(str[position].code + m, 16)
		b = LSHIFT(str[position + 1].code + m, 8)
		c = str[position + 2].code + m
		buffer = a + b + c
		output.push get(AND(RSHIFT(buffer, 18), 63))
		output.push get(AND(RSHIFT(buffer, 12), 63))
		output.push get(AND(RSHIFT(buffer, 6), 63))
		output.push get(AND(buffer, 63))
		position = position + 3
	end while
	if padding == 2 then
		m = hash[position % hash.len - 1]
		a = LSHIFT(str[position].code + m, 8)
		b = str[position + 1].code + m
		buffer = a + b
		output.push get(RSHIFT(buffer, 10))
		output.push get(AND(RSHIFT(buffer, 4), 63))
		output.push get(AND(LSHIFT(buffer, 2), 63))
		output.push \\"=\\"
	else if padding == 1 then
		m = hash[position % hash.len - 1]
		buffer = str[position].code + m
		output.push get(RSHIFT(buffer, 2))
		output.push get(AND(LSHIFT(buffer, 4), 63))
		output.push \\"==\\"
	end if
	return output.join(\\"\\")
end function

Crypto.decrypt = function(str, pw)
	me = self
	if pw == null then pw = me.defaultSecret
	hash = me.getHash(pw)
	hashPointer = 0
	hashLength = hash.len
	output = []
	bitCounter = 0
	bitStorage = 0
	position = 0
	hashPointer = 0
	max = str.len
	AND = function(a, b)
		return bitwise(\\"&\\", a, b)
	end function
	RSHIFT = function(a, b)
		return bitwise(\\">>\\", a, b)
	end function
	while position < max
		buffer = me.table.indexOf(str[position])
		currentBit = bitCounter
		bitCounter = bitCounter + 1
		if currentBit % 4 then
			bitStorage = bitStorage * 64 + buffer
		else
			bitStorage = buffer
		end if
		if currentBit % 4 then
			expectedHashIndex = (floor(hashPointer / 3) * 3) % hashLength - 1
			if not hash.hasIndex(expectedHashIndex) then break
			m = hash[expectedHashIndex]
			operation = AND(-2 * bitCounter, 6)
			operation = RSHIFT(bitStorage, operation)
			operation = AND(255, operation)
			if operation != 0 then
				charCode = operation - m
				if charCode > me.maxCharCode then break
				output.push char(charCode)
			end if
			hashPointer = hashPointer + 1
		end if
		position = position + 1
	end while
	return output.join(\\"\\")
end function

test = (new Crypto).constructor(\\"test\\")

pwd = \\"abcde\\"

foo = test.encrypt(pwd)
decrypted = test.decrypt(foo)

print foo
print decrypted",
]
`;

exports[`parse default scripts pseudo-crypto.src uglify 1`] = `
Array [
  "globals.H=globals
H.AW=1
H.AU=null
H.AV=63
I={}
I.constructor=function(str)
self.str=str
return self
end function
I.parse=function(values)
d=self.str
e=0
f=values.len
while e<f
d=d.replace(\\"$\\"+e,values[e])
e=e+AW
end while
return (new self).constructor(d)
end function
I.startsWith=function(str)
return self.str.indexOf(str)==0
end function
I.substr=function(g,h)
return (new self).constructor(slice(self.str,g,h))
end function
I.indexOf=function(str)
return self.str.indexOf(str)
end function
I.replace=function(str,i)
return (new self).constructor(self.str.replace(str,i))
end function
I.remove=function(str)
return (new self).constructor(self.str.remove(str))
end function
I.toString=function
return self.str
end function
I.length=function
return self.str.len
end function
I.split=function(j)
return self.str.split(j)
end function
I.trim=function(j)
return (new self).constructor(self.str.trim)
end function
Q={}
Q.String=I
Q.constructor=function(k,values)
l=self
l.message=k
if (values!=AU) then
l.message=(new l.String).constructor(k).parse(values).toString
end if
return l
end function
Q.throw=function
exit(\\"<color=#ff0000>\\"+self.message+\\"</color>\\")
end function
S={}
S.defaultCharset=\\"QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm1234567890+-\\"
S.defaultSecret=\\"test123\\"
S.maxCharCode=55295
S.Error=Q
S.constructor=function(U,n,o)
p=self
p.defaultSecret=U
p.table=o
p.hashFn=@n
if (@n==AU) then p.hashFn=@md5
if o==AU then p.table=p.defaultCharset
if p.table.len!=64 then (new p.Error).constructor(\\"Invalid charset $0...\\",[p.table]).throw
return p
end function
S.getHash=function(r)
p=self
hash=[]
s=p.hashFn(r)
for char in s
hash.push(char.code)
end for
hash.reverse
return hash
end function
S.encrypt=function(str,r)
p=self
if (r==AU) then r=p.defaultSecret
hash=p.getHash(r)
u=0
AM=[]
w=0
y=str.len%3
z=str.len-y
_A=function(AL)
if (not p.table.hasIndex(AL)) then
(new p.Error).constructor(\\"Invalid index $0...\\",[AL]).throw
end if
return p.table[AL]
end function
AB=function(AE,AG)
return bitwise(\\"&\\",AE,AG)
end function
AC=function(AE,AG)
return bitwise(\\"<<\\",AE,AG)
end function
AD=function(AE,AG)
return bitwise(\\">>\\",AE,AG)
end function
while w<z
l=hash[w%hash.len-AW]
AE=AC(str[w].code+l,16)
AG=AC(str[w+AW].code+l,8)
AI=str[w+2].code+l
AK=AE+AG+AI
AM.push(_A(AB(AD(AK,18),AV)))
AM.push(_A(AB(AD(AK,12),AV)))
AM.push(_A(AB(AD(AK,6),AV)))
AM.push(_A(AB(AK,AV)))
w=w+3
end while
if (y==2) then
l=hash[w%hash.len-AW]
AE=AC(str[w].code+l,8)
AG=str[w+AW].code+l
AK=AE+AG
AM.push(_A(AD(AK,10)))
AM.push(_A(AB(AD(AK,4),AV)))
AM.push(_A(AB(AC(AK,2),AV)))
AM.push(\\"=\\")
else if (y==AW) then
l=hash[w%hash.len-AW]
AK=str[w].code+l
AM.push(_A(AD(AK,2)))
AM.push(_A(AB(AC(AK,4),AV)))
AM.push(\\"==\\")
end if
return AM.join(\\"\\")
end function
S.decrypt=function(str,r)
p=self
if (r==AU) then r=p.defaultSecret
hash=p.getHash(r)
u=0
AN=hash.len
AM=[]
AO=0
AP=0
w=0
u=0
z=str.len
AB=function(AE,AG)
return bitwise(\\"&\\",AE,AG)
end function
AD=function(AE,AG)
return bitwise(\\">>\\",AE,AG)
end function
while w<z
AK=p.table.indexOf(str[w])
AQ=AO
AO=AO+AW
if (AQ%4) then
AP=AP*64+AK
else
AP=AK
end if
if (AQ%4) then
AR=(floor(u/3)*3)%AN-AW
if (not hash.hasIndex(AR)) then break
l=hash[AR]
AS=AB(-2*AO,6)
AS=AD(AP,AS)
AS=AB(255,AS)
if (AS!=0) then
AT=AS-l
if (AT>p.maxCharCode) then break
AM.push(char(AT))
end if
u=u+AW
end if
w=w+AW
end while
return AM.join(\\"\\")
end function
Z=(new S).constructor(\\"test\\")
AF=\\"abcde\\"
AH=Z.encrypt(AF)
AJ=Z.decrypt(AH)
print(AH)
print(AJ)",
]
`;

exports[`parse default scripts random.src 1`] = `
Array [
  "Random={}
Random.pool={}
Random.defaultSeed=\\"random\\"
Random.createPool=function(seed,val)
return {\\"seed\\":seed,\\"value\\":val,\\"generation\\":0}
end function
Random.calcSeed=function(seed)
seedVal=0
pos=seed.len
for char in seed
seedVal=seedVal+char.code+pos
pos=pos-1
end for
return seedVal
end function
Random.gen=function(min,max,seed,inc)
me=self
pool=me.pool
if (inc==null) then inc=true
if (seed==null) then seed=me.defaultSeed
if (pool.hasIndex(seed)) then
ps=pool[seed]
if (not inc) then return ps.value
ps.generation=ps.generation+1
val=floor((rnd(ps.value+ps.generation)*(max-min))+min)
ps.value=val
return val
end if
seedVal=me.calcSeed(seed)
val=floor((rnd(seedVal)*(max-min))+min)
pool[seed]=me.createPool(seedVal,val)
return val
end function
Random.seq=function(min,max,seed,amount,keepPool)
me=self
index=0
result=[]
while index<amount
temp=me.gen(min,max,seed)
result.push(temp)
index=index+1
end while
if (keepPool!=true) then me.pool.remove(seed)
return result
end function
Random.get=function(min,max)
return self.gen(min,max)
end function
print(Random.get(100,500))
print(Random.seq(100,500,\\"test\\",10))",
]
`;

exports[`parse default scripts random.src beautify 1`] = `
Array [
  "Random = {}

Random.pool = {}
Random.defaultSeed = \\"random\\"

Random.createPool = function(seed, val)
	return {
		\\"seed\\": seed,
		\\"value\\": val,
		\\"generation\\": 0,
	}
end function

Random.calcSeed = function(seed)
	seedVal = 0
	pos = seed.len

	for char in seed
		seedVal = seedVal + char.code + pos
		pos = pos - 1
	end for

	return seedVal
end function

Random.gen = function(min, max, seed, inc)
	me = self
	pool = me.pool
	if inc == null then inc = true
	if seed == null then seed = me.defaultSeed
	if pool.hasIndex(seed) then
		ps = pool[seed]
		if not inc then return ps.value
		ps.generation = ps.generation + 1
		val = floor((rnd(ps.value + ps.generation) * (max - min)) + min)
		ps.value = val
		return val
	end if

	seedVal = me.calcSeed(seed)

	val = floor((rnd(seedVal) * (max - min)) + min)
	pool[seed] = me.createPool(seedVal, val)

	return val
end function

Random.seq = function(min, max, seed, amount, keepPool)
	me = self
	index = 0
	result = []
	while index < amount
		temp = me.gen(min, max, seed)
		result.push temp
		index = index + 1
	end while
	if keepPool != true then me.pool.remove(seed)
	return result
end function

Random.get = function(min, max)
	return self.gen(min, max)
end function

print Random.get(100, 500)
print Random.seq(
	100,
	500,
	\\"test\\",
	10)",
]
`;

exports[`parse default scripts random.src uglify 1`] = `
Array [
  "I={}
I.pool={}
I.defaultSeed=\\"random\\"
I.createPool=function(Q,val)
return {\\"seed\\":Q,\\"value\\":val,\\"generation\\":0}
end function
I.calcSeed=function(Q)
R=0
S=Q.len
for char in Q
R=R+char.code+S
S=S-1
end for
return R
end function
I.gen=function(T,U,Q,V)
W=self
J=W.pool
if (V==null) then V=true
if (Q==null) then Q=W.defaultSeed
if (J.hasIndex(Q)) then
X=J[Q]
if (not V) then return X.value
X.generation=X.generation+1
val=floor((rnd(X.value+X.generation)*(U-T))+T)
X.value=val
return val
end if
R=W.calcSeed(Q)
val=floor((rnd(R)*(U-T))+T)
J[Q]=W.createPool(R,val)
return val
end function
I.seq=function(T,U,Q,a,b)
W=self
c=0
d=[]
while c<a
e=W.gen(T,U,Q)
d.push(e)
c=c+1
end while
if (b!=true) then W.pool.remove(Q)
return d
end function
I.get=function(T,U)
return self.gen(T,U)
end function
print(I.get(100,500))
print(I.seq(100,500,\\"test\\",10))",
]
`;

exports[`parse default scripts simple-object.src 1`] = `
Array [
  "test={}
test.here=\\"was\\"
test.was=function
super.here
print(self.here)
end function
print(test.was)",
]
`;

exports[`parse default scripts simple-object.src beautify 1`] = `
Array [
  "test = {}

test.here = \\"was\\"

test.was = function
	super.here
	print self.here
end function

print test.was",
]
`;

exports[`parse default scripts simple-object.src uglify 1`] = `
Array [
  "I={}
I.here=\\"was\\"
I.was=function
super.here
print(self.here)
end function
print(I.was)",
]
`;

exports[`parse default scripts slice.src 1`] = `
Array [
  "divideString=function(str,limit)
offset=0
maxLen=str.len
frags=[]
while offset<maxLen
next=offset+limit
frags.push(str[offset:next])
offset=next
end while
return frags
end function
print(divideString(\\"blahhblahhblahhblahhblahhblahhgad\\",5))",
]
`;

exports[`parse default scripts slice.src beautify 1`] = `
Array [
  "divideString = function(str, limit)
	offset = 0
	maxLen = str.len
	frags = []

	while offset < maxLen
		next = offset + limit
		frags.push str[offset : next]
		offset = next
	end while

	return frags
end function

print divideString(\\"blahhblahhblahhblahhblahhblahhgad\\", 5)",
]
`;

exports[`parse default scripts slice.src uglify 1`] = `
Array [
  "I=function(str,J)
K=0
L=str.len
M=[]
while K<L
N=K+J
M.push(str[K:N])
K=N
end while
return M
end function
print(I(\\"blahhblahhblahhblahhblahhblahhgad\\",5))",
]
`;

exports[`parse default scripts unary.src 1`] = `
Array [
  "test=function
return null
end function
print(@\\"was\\".split and (false or not false))
print(@(\\"was\\".split and (false or not false)))
print(not \\"was\\".split and (false or not false))
print(not (\\"was\\".split and (false or not false)))
print(-1+2)
print(-(1+2))",
]
`;

exports[`parse default scripts unary.src beautify 1`] = `
Array [
  "test = function
	return null
end function

print @\\"was\\".split and (false or not false)
print @(\\"was\\".split and (false or not false))
print not \\"was\\".split and (false or not false)
print not (\\"was\\".split and (false or not false))
print -1 + 2
print -(1 + 2)",
]
`;

exports[`parse default scripts unary.src uglify 1`] = `
Array [
  "globals.H=globals
H.K=\\"was\\"
H.J=false
I=function
return null
end function
print(@K.split and (J or not J))
print(@(K.split and (J or not J)))
print(not K.split and (J or not J))
print(not (K.split and (J or not J)))
print(-1+2)
print(-(1+2))",
]
`;
